commit bilingual contents

--- a/docs/visual-basic/misc/bc31109.md
+++ b/docs/visual-basic/misc/bc31109.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33621814"
 ---
 # <a name="implementing-class-39ltunderlyingclassnamegt39-for-interface-39ltinterfacenamegt39-is-not-accessible-in-this-context-because-it-is-39ltaccesslevelgt39"></a><span data-ttu-id="29280-102">クラスを実装する&#39; &lt;underlyingclassname&gt; &#39;インターフェイスの&#39; &lt;interfacename&gt; &#39;になっているためにはこのコンテキストでアクセスできなくなって&#39; &lt;accesslevel&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="29280-102">Implementing class &#39;&lt;underlyingclassname&gt;&#39; for interface &#39;&lt;interfacename&gt;&#39; is not accessible in this context because it is &#39;&lt;accesslevel&gt;&#39;</span></span>
 <span data-ttu-id="29280-103">インターフェイスが <xref:System.Runtime.InteropServices.CoClassAttribute> で宣言され、基になるクラスが指定されていますが、このクラスのアクセス レベルにより、使用側のコードはそれにアクセスできません。</span><span class="sxs-lookup"><span data-stu-id="29280-103">An interface is declared with the <xref:System.Runtime.InteropServices.CoClassAttribute> specifying an underlying class, but that class has an access level that prevents the using code from accessing it.</span></span>  
