--- a/docs/visual-basic/misc/bc31151.md
+++ b/docs/visual-basic/misc/bc31151.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33621782"
 ---
 # <a name="element-is-missing-an-end-tag"></a><span data-ttu-id="c2b50-102">要素に終了タグがありません。</span><span class="sxs-lookup"><span data-stu-id="c2b50-102">Element is missing an end tag</span></span>
 <span data-ttu-id="c2b50-103">XML 要素リテラルには、XML の終了タグまたは空のタグ識別子 '/' ( `<tagName />`など) がありません。</span><span class="sxs-lookup"><span data-stu-id="c2b50-103">An XML element literal is missing an XML end tag or an empty tag identifier '/' (for example, `<tagName />`).</span></span>  
