--- a/docs/visual-basic/misc/bc31431.md
+++ b/docs/visual-basic/misc/bc31431.md
@@ -1,27 +1,21 @@
 ---
-title: '部分メソッドを宣言する必要があります (& a) #39 です。プライベート &#39;代わりに &#39;です。&lt;accessModifier&gt;&#39;です。'
+title: 部分メソッドを宣言する必要があります&#39;プライベート&#39;の代わりに&#39; &lt;accessModifier&gt;&#39;
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc31431
 - bc31431
 helpviewer_keywords:
 - BC31431
 ms.assetid: bbd757f3-7281-4488-8a06-f3b4bcc820dc
-caps.latest.revision: 6
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 943c960d2ce5bf279a9780fd6c634c3eda268001
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: d4c3d495cce08a4003de46d7db32f21be7a8bd48
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33624830"
 ---
-# <a name="partial-methods-must-be-declared-39private39-instead-of-39ltaccessmodifiergt39"></a><span data-ttu-id="1fc9f-102">部分メソッドを宣言する必要があります (& a) #39 です。プライベート &#39;代わりに &#39;です。&lt;accessModifier&gt;&#39;です。</span><span class="sxs-lookup"><span data-stu-id="1fc9f-102">Partial methods must be declared &#39;Private&#39; instead of &#39;&lt;accessModifier&gt;&#39;</span></span>
-<span data-ttu-id="1fc9f-103">アクセス修飾子 `Private` は部分メソッドの宣言に必要です。</span><span class="sxs-lookup"><span data-stu-id="1fc9f-103">The access modifier `Private` is required in partial method declarations.</span></span> <span data-ttu-id="1fc9f-104">メソッドのシグネチャとその実装で `Private` を使用する例を次に示します。</span><span class="sxs-lookup"><span data-stu-id="1fc9f-104">The following example shows the use of `Private` in the method signature and its implementation.</span></span>  
+# <a name="partial-methods-must-be-declared-39private39-instead-of-39ltaccessmodifiergt39"></a><span data-ttu-id="53907-102">部分メソッドを宣言する必要があります&#39;プライベート&#39;の代わりに&#39; &lt;accessModifier&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="53907-102">Partial methods must be declared &#39;Private&#39; instead of &#39;&lt;accessModifier&gt;&#39;</span></span>
+<span data-ttu-id="53907-103">アクセス修飾子 `Private` は部分メソッドの宣言に必要です。</span><span class="sxs-lookup"><span data-stu-id="53907-103">The access modifier `Private` is required in partial method declarations.</span></span> <span data-ttu-id="53907-104">メソッドのシグネチャとその実装で `Private` を使用する例を次に示します。</span><span class="sxs-lookup"><span data-stu-id="53907-104">The following example shows the use of `Private` in the method signature and its implementation.</span></span>  
   
 ```vb  
 ' Definition of the partial method signature.  
@@ -37,11 +31,11 @@ Private Sub OnNameChanged()
 End Sub  
 ```  
   
- <span data-ttu-id="1fc9f-105">**エラー ID:** BC31431</span><span class="sxs-lookup"><span data-stu-id="1fc9f-105">**Error ID:** BC31431</span></span>  
+ <span data-ttu-id="53907-105">**エラー ID:** BC31431</span><span class="sxs-lookup"><span data-stu-id="53907-105">**Error ID:** BC31431</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="1fc9f-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="1fc9f-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="53907-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="53907-106">To correct this error</span></span>  
   
--   <span data-ttu-id="1fc9f-107">シグネチャと実装の宣言で、アクセス修飾子を `Private` に変更します。</span><span class="sxs-lookup"><span data-stu-id="1fc9f-107">Change the access modifier to `Private` in the signature and implementation declarations.</span></span>  
+-   <span data-ttu-id="53907-107">シグネチャと実装の宣言で、アクセス修飾子を `Private` に変更します。</span><span class="sxs-lookup"><span data-stu-id="53907-107">Change the access modifier to `Private` in the signature and implementation declarations.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="1fc9f-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="1fc9f-108">See Also</span></span>  
- [<span data-ttu-id="1fc9f-109">部分メソッド</span><span class="sxs-lookup"><span data-stu-id="1fc9f-109">Partial Methods</span></span>](../../visual-basic/programming-guide/language-features/procedures/partial-methods.md)
+## <a name="see-also"></a><span data-ttu-id="53907-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="53907-108">See Also</span></span>  
+ [<span data-ttu-id="53907-109">部分メソッド</span><span class="sxs-lookup"><span data-stu-id="53907-109">Partial Methods</span></span>](../../visual-basic/programming-guide/language-features/procedures/partial-methods.md)
