--- a/docs/visual-basic/misc/bc33024.md
+++ b/docs/visual-basic/misc/bc33024.md
@@ -1,40 +1,34 @@
 ---
 title: 変換演算子によって、ある型から同じ型に変換することはできません
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc33024
 - vbc33024
 helpviewer_keywords:
 - BC33024
 ms.assetid: 4b47bcb0-4f0c-4d1c-9274-cce5b8e2b370
-caps.latest.revision: 9
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: adf5abec581b68085b09c512197fd4744fa663ca
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: 9ae011f01f0ceeec6ca6c2d9c2e7c132dcb63f63
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33631265"
 ---
-# <a name="conversion-operators-cannot-convert-from-a-type-to-the-same-type"></a><span data-ttu-id="3a73a-102">変換演算子によって、ある型から同じ型に変換することはできません</span><span class="sxs-lookup"><span data-stu-id="3a73a-102">Conversion operators cannot convert from a type to the same type</span></span>
-<span data-ttu-id="3a73a-103">変換演算子がパラメーターと戻り値の両方で同じ型で宣言されています。</span><span class="sxs-lookup"><span data-stu-id="3a73a-103">A conversion operator is declared with the same type for both the parameter and the return.</span></span>  
+# <a name="conversion-operators-cannot-convert-from-a-type-to-the-same-type"></a><span data-ttu-id="e6086-102">変換演算子によって、ある型から同じ型に変換することはできません</span><span class="sxs-lookup"><span data-stu-id="e6086-102">Conversion operators cannot convert from a type to the same type</span></span>
+<span data-ttu-id="e6086-103">変換演算子がパラメーターと戻り値の両方で同じ型で宣言されています。</span><span class="sxs-lookup"><span data-stu-id="e6086-103">A conversion operator is declared with the same type for both the parameter and the return.</span></span>  
   
- <span data-ttu-id="3a73a-104">型を同じ型に変換しても意味がありません。</span><span class="sxs-lookup"><span data-stu-id="3a73a-104">It is not meaningful to convert from any type to itself.</span></span>  
+ <span data-ttu-id="e6086-104">型を同じ型に変換しても意味がありません。</span><span class="sxs-lookup"><span data-stu-id="e6086-104">It is not meaningful to convert from any type to itself.</span></span>  
   
- <span data-ttu-id="3a73a-105">**エラー ID:** BC33024</span><span class="sxs-lookup"><span data-stu-id="3a73a-105">**Error ID:** BC33024</span></span>  
+ <span data-ttu-id="e6086-105">**エラー ID:** BC33024</span><span class="sxs-lookup"><span data-stu-id="e6086-105">**Error ID:** BC33024</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="3a73a-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="3a73a-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e6086-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="e6086-106">To correct this error</span></span>  
   
--   <span data-ttu-id="3a73a-107">パラメーターまたは戻り値のいずれかの型を変更します。</span><span class="sxs-lookup"><span data-stu-id="3a73a-107">Change the type of either the parameter or the return value.</span></span> <span data-ttu-id="3a73a-108">いずれか一方を、この演算子が定義されているクラスまたは構造体の型にする必要があります。</span><span class="sxs-lookup"><span data-stu-id="3a73a-108">One of them must be of the type of the class or structure in which this operator is defined.</span></span> <span data-ttu-id="3a73a-109">他方を別の型にする必要があります。</span><span class="sxs-lookup"><span data-stu-id="3a73a-109">The other must be of a different type.</span></span>  
+-   <span data-ttu-id="e6086-107">パラメーターまたは戻り値のいずれかの型を変更します。</span><span class="sxs-lookup"><span data-stu-id="e6086-107">Change the type of either the parameter or the return value.</span></span> <span data-ttu-id="e6086-108">いずれか一方を、この演算子が定義されているクラスまたは構造体の型にする必要があります。</span><span class="sxs-lookup"><span data-stu-id="e6086-108">One of them must be of the type of the class or structure in which this operator is defined.</span></span> <span data-ttu-id="e6086-109">他方を別の型にする必要があります。</span><span class="sxs-lookup"><span data-stu-id="e6086-109">The other must be of a different type.</span></span>  
   
--   <span data-ttu-id="3a73a-110">パラメーターの内容の変換を実行する必要がある場合、[関数ステートメント](../../visual-basic/language-reference/statements/function-statement.md)を定義する、`Function`演算子ではなくプロシージャです。</span><span class="sxs-lookup"><span data-stu-id="3a73a-110">If you need to perform a transformation on the contents of the parameter, use a [Function Statement](../../visual-basic/language-reference/statements/function-statement.md) to define a `Function` procedure instead of an operator.</span></span>  
+-   <span data-ttu-id="e6086-110">パラメーターの内容の変換を実行する必要がある場合、[関数ステートメント](../../visual-basic/language-reference/statements/function-statement.md)を定義する、`Function`演算子ではなくプロシージャです。</span><span class="sxs-lookup"><span data-stu-id="e6086-110">If you need to perform a transformation on the contents of the parameter, use a [Function Statement](../../visual-basic/language-reference/statements/function-statement.md) to define a `Function` procedure instead of an operator.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="3a73a-111">関連項目</span><span class="sxs-lookup"><span data-stu-id="3a73a-111">See Also</span></span>  
- [<span data-ttu-id="3a73a-112">演算子プロシージャ</span><span class="sxs-lookup"><span data-stu-id="3a73a-112">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)  
- [<span data-ttu-id="3a73a-113">Operator ステートメント</span><span class="sxs-lookup"><span data-stu-id="3a73a-113">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)  
- [<span data-ttu-id="3a73a-114">方法 : 演算子を定義する</span><span class="sxs-lookup"><span data-stu-id="3a73a-114">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)  
- [<span data-ttu-id="3a73a-115">方法 : 変換演算子を定義する</span><span class="sxs-lookup"><span data-stu-id="3a73a-115">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+## <a name="see-also"></a><span data-ttu-id="e6086-111">関連項目</span><span class="sxs-lookup"><span data-stu-id="e6086-111">See Also</span></span>  
+ [<span data-ttu-id="e6086-112">演算子プロシージャ</span><span class="sxs-lookup"><span data-stu-id="e6086-112">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)  
+ [<span data-ttu-id="e6086-113">Operator ステートメント</span><span class="sxs-lookup"><span data-stu-id="e6086-113">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)  
+ [<span data-ttu-id="e6086-114">方法 : 演算子を定義する</span><span class="sxs-lookup"><span data-stu-id="e6086-114">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)  
+ [<span data-ttu-id="e6086-115">方法 : 変換演算子を定義する</span><span class="sxs-lookup"><span data-stu-id="e6086-115">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
