--- a/docs/visual-basic/misc/bc36002.md
+++ b/docs/visual-basic/misc/bc36002.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33628663"
 ---
 # <a name="39global39-not-allowed-in-handles-local-name-expected"></a><span data-ttu-id="ff19b-102">&#39;グローバル&#39;ハンドルで許可されていませんローカル名が必要</span><span class="sxs-lookup"><span data-stu-id="ff19b-102">&#39;Global&#39; not allowed in handles; local name expected</span></span>
 <span data-ttu-id="ff19b-103">`Handles` 句は、ローカル イベントを参照する必要があります。</span><span class="sxs-lookup"><span data-stu-id="ff19b-103">A `Handles` clause must refer to a local event.</span></span> <span data-ttu-id="ff19b-104">`Global` キーワードにより、グローバルなプログラミング要素にアクセスできるようになります。</span><span class="sxs-lookup"><span data-stu-id="ff19b-104">The `Global` keyword provides access to global programming elements.</span></span>  
