--- a/docs/visual-basic/misc/bc36009.md
+++ b/docs/visual-basic/misc/bc36009.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33630792"
 ---
 # <a name="39goto-ltlinelabelgt39-is-not-valid-because-39ltlinelabelgt39-is-inside-a-39using39-statement-that-does-not-contain-this-statement"></a><span data-ttu-id="f5d94-102">&#39;GoTo &lt;linelabel&gt; &#39;が正しくないため&#39; &lt;linelabel&gt; &#39;内部にある、&#39;を使用する&#39;このステートメントを含まないステートメント</span><span class="sxs-lookup"><span data-stu-id="f5d94-102">&#39;GoTo &lt;linelabel&gt;&#39; is not valid because &#39;&lt;linelabel&gt;&#39; is inside a &#39;Using&#39; statement that does not contain this statement</span></span>
 <span data-ttu-id="f5d94-103">`GoTo` 構造の外部にある `Using` ステートメントがこの構造内の行ラベルに分岐しようとしました。</span><span class="sxs-lookup"><span data-stu-id="f5d94-103">A `GoTo` statement outside a `Using` construction attempts to branch to a line label inside the construction.</span></span>  
