--- a/docs/visual-basic/misc/bc36567.md
+++ b/docs/visual-basic/misc/bc36567.md
@@ -1,35 +1,29 @@
 ---
-title: パラメーター &#39;&lt;parametername&gt;&#39; 一致する引数には既に
+title: パラメーター &#39; &lt;parametername&gt; &#39; 、一致する引数には既に
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc36567
 - bc36567
 helpviewer_keywords:
 - BC36567
 ms.assetid: f01fc8d8-924a-4492-add1-db06604edcbf
-caps.latest.revision: 7
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 14cbacd995cf0932b1467038cb9e7510ea130002
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 00cf25e27dd26c376e639904d7ae70217a9088a4
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33630342"
 ---
-# <a name="parameter-39ltparameternamegt39-already-has-a-matching-argument"></a><span data-ttu-id="2dbbe-102">パラメーター &#39;&lt;parametername&gt;&#39; 一致する引数には既に</span><span class="sxs-lookup"><span data-stu-id="2dbbe-102">Parameter &#39;&lt;parametername&gt;&#39; already has a matching argument</span></span>
-<span data-ttu-id="2dbbe-103">1 つの引数が、同じプロシージャ呼び出しで複数回にわたって名前で渡されています。</span><span class="sxs-lookup"><span data-stu-id="2dbbe-103">An argument is passed by name more than one time in the same procedure call.</span></span>  
+# <a name="parameter-39ltparameternamegt39-already-has-a-matching-argument"></a><span data-ttu-id="ef935-102">パラメーター &#39; &lt;parametername&gt; &#39; 、一致する引数には既に</span><span class="sxs-lookup"><span data-stu-id="ef935-102">Parameter &#39;&lt;parametername&gt;&#39; already has a matching argument</span></span>
+<span data-ttu-id="ef935-103">1 つの引数が、同じプロシージャ呼び出しで複数回にわたって名前で渡されています。</span><span class="sxs-lookup"><span data-stu-id="ef935-103">An argument is passed by name more than one time in the same procedure call.</span></span>  
   
- <span data-ttu-id="2dbbe-104">**エラー ID:** BC36567</span><span class="sxs-lookup"><span data-stu-id="2dbbe-104">**Error ID:** BC36567</span></span>  
+ <span data-ttu-id="ef935-104">**エラー ID:** BC36567</span><span class="sxs-lookup"><span data-stu-id="ef935-104">**Error ID:** BC36567</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="2dbbe-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="2dbbe-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ef935-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="ef935-105">To correct this error</span></span>  
   
--   <span data-ttu-id="2dbbe-106">引数名のいずれかのスペルが誤っていないかどうかを確認します。</span><span class="sxs-lookup"><span data-stu-id="2dbbe-106">Check to see whether one of the argument names is misspelled.</span></span>  
+-   <span data-ttu-id="ef935-106">引数名のいずれかのスペルが誤っていないかどうかを確認します。</span><span class="sxs-lookup"><span data-stu-id="ef935-106">Check to see whether one of the argument names is misspelled.</span></span>  
   
--   <span data-ttu-id="2dbbe-107">引数リストから重複している引数を削除します。</span><span class="sxs-lookup"><span data-stu-id="2dbbe-107">Remove the duplicated argument from the argument list.</span></span>  
+-   <span data-ttu-id="ef935-107">引数リストから重複している引数を削除します。</span><span class="sxs-lookup"><span data-stu-id="ef935-107">Remove the duplicated argument from the argument list.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="2dbbe-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="2dbbe-108">See Also</span></span>  
- [<span data-ttu-id="2dbbe-109">位置と名前による引数渡し</span><span class="sxs-lookup"><span data-stu-id="2dbbe-109">Passing Arguments by Position and by Name</span></span>](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
+## <a name="see-also"></a><span data-ttu-id="ef935-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="ef935-108">See Also</span></span>  
+ [<span data-ttu-id="ef935-109">位置と名前による引数渡し</span><span class="sxs-lookup"><span data-stu-id="ef935-109">Passing Arguments by Position and by Name</span></span>](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
