--- a/docs/visual-basic/misc/bc36642.md
+++ b/docs/visual-basic/misc/bc36642.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33631681"
 ---
 # <a name="option-strict-on-requires-each-lambda-expression-parameter-to-be-declared-with-an-39as39-clause-if-its-type-cannot-be-inferred"></a><span data-ttu-id="ed69f-102">Option Strict On で宣言するのには各ラムダ式のパラメーターが必要です、&#39;として&#39;句の型を推論できない場合</span><span class="sxs-lookup"><span data-stu-id="ed69f-102">Option Strict On requires each lambda expression parameter to be declared with an &#39;As&#39; clause if its type cannot be inferred</span></span>
 <span data-ttu-id="ed69f-103">ラムダ式で `As` 句を使用せずにパラメーター宣言し、 `Option Strict` がオンになっています。</span><span class="sxs-lookup"><span data-stu-id="ed69f-103">You have declared a parameter in a lambda expression without using an `As` clause, with `Option Strict` on.</span></span>  
