--- a/docs/visual-basic/misc/bc40000.md
+++ b/docs/visual-basic/misc/bc40000.md
@@ -1,36 +1,30 @@
 ---
-title: "&#39;です。&lt;elementname&gt;&#39; は今後使用しません (& a) #39;&lt; 。errormessage&gt;&#39;です。"
+title: '&#39;&lt;elementname&gt; &#39;は廃止されています: &#39; &lt;errormessage&gt;&#39;'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc40000
 - vbc40000
 helpviewer_keywords:
 - BC40000
 ms.assetid: dade0f57-eca1-4dd0-b978-020678838be6
-caps.latest.revision: 
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: e1bebac916ec8c596f0777609743ac01fab8e654
-ms.sourcegitcommit: 34ec7753acf76f90a0fa845235ef06663dc9e36e
+ms.openlocfilehash: 09ca30acf1abc81b3214b6f51e5750d8554adcc8
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 12/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33633072"
 ---
-# <a name="39ltelementnamegt39-is-obsolete-39lterrormessagegt39"></a><span data-ttu-id="a0503-102">&#39;です。&lt;elementname&gt;&#39; は今後使用しません (& a) #39;&lt; 。errormessage&gt;&#39;です。</span><span class="sxs-lookup"><span data-stu-id="a0503-102">&#39;&lt;elementname&gt;&#39; is obsolete: &#39;&lt;errormessage&gt;&#39;</span></span>
-<span data-ttu-id="a0503-103"><xref:System.ObsoleteAttribute> 属性でマークされているプログラミング要素にステートメントがアクセスを試行しています。この試行をディレクティブは警告として処理します。</span><span class="sxs-lookup"><span data-stu-id="a0503-103">A statement attempts to access a programming element which has been marked with the <xref:System.ObsoleteAttribute> attribute and the directive to treat it as a warning.</span></span>  
+# <a name="39ltelementnamegt39-is-obsolete-39lterrormessagegt39"></a><span data-ttu-id="ef19e-102">&#39;&lt;elementname&gt; &#39;は廃止されています: &#39; &lt;errormessage&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="ef19e-102">&#39;&lt;elementname&gt;&#39; is obsolete: &#39;&lt;errormessage&gt;&#39;</span></span>
+<span data-ttu-id="ef19e-103"><xref:System.ObsoleteAttribute> 属性でマークされているプログラミング要素にステートメントがアクセスを試行しています。この試行をディレクティブは警告として処理します。</span><span class="sxs-lookup"><span data-stu-id="ef19e-103">A statement attempts to access a programming element which has been marked with the <xref:System.ObsoleteAttribute> attribute and the directive to treat it as a warning.</span></span>  
   
- <span data-ttu-id="a0503-104"><xref:System.ObsoleteAttribute> を適用することで、任意のプログラミング要素を使用しない要素としてマークできます。</span><span class="sxs-lookup"><span data-stu-id="a0503-104">You can mark any programming element as being no longer in use by applying <xref:System.ObsoleteAttribute> to it.</span></span> <span data-ttu-id="a0503-105">これを行う場合、この属性の <xref:System.ObsoleteAttribute.IsError%2A> プロパティを `True` または `False`のどちらかに設定できます。</span><span class="sxs-lookup"><span data-stu-id="a0503-105">If you do this, you can set the attribute's <xref:System.ObsoleteAttribute.IsError%2A> property to either `True` or `False`.</span></span> <span data-ttu-id="a0503-106">`True`に設定した場合、この要素を使用しようとすると、コンパイラはエラーとして処理します。</span><span class="sxs-lookup"><span data-stu-id="a0503-106">If you set it to `True`, the compiler treats an attempt to use the element as an error.</span></span> <span data-ttu-id="a0503-107">`False`に設定した場合、または既定値の `False`を使用した場合、コンパイラはこの要素の使用が試行されると、警告を発行します。</span><span class="sxs-lookup"><span data-stu-id="a0503-107">If you set it to `False`, or let it default to `False`, the compiler issues a warning if there is an attempt to use the element.</span></span>  
+ <span data-ttu-id="ef19e-104"><xref:System.ObsoleteAttribute> を適用することで、任意のプログラミング要素を使用しない要素としてマークできます。</span><span class="sxs-lookup"><span data-stu-id="ef19e-104">You can mark any programming element as being no longer in use by applying <xref:System.ObsoleteAttribute> to it.</span></span> <span data-ttu-id="ef19e-105">これを行う場合、この属性の <xref:System.ObsoleteAttribute.IsError%2A> プロパティを `True` または `False`のどちらかに設定できます。</span><span class="sxs-lookup"><span data-stu-id="ef19e-105">If you do this, you can set the attribute's <xref:System.ObsoleteAttribute.IsError%2A> property to either `True` or `False`.</span></span> <span data-ttu-id="ef19e-106">`True`に設定した場合、この要素を使用しようとすると、コンパイラはエラーとして処理します。</span><span class="sxs-lookup"><span data-stu-id="ef19e-106">If you set it to `True`, the compiler treats an attempt to use the element as an error.</span></span> <span data-ttu-id="ef19e-107">`False`に設定した場合、または既定値の `False`を使用した場合、コンパイラはこの要素の使用が試行されると、警告を発行します。</span><span class="sxs-lookup"><span data-stu-id="ef19e-107">If you set it to `False`, or let it default to `False`, the compiler issues a warning if there is an attempt to use the element.</span></span>  
   
- <span data-ttu-id="a0503-108">既定では、 <xref:System.ObsoleteAttribute.IsError%2A> の <xref:System.ObsoleteAttribute> プロパティが `False`であるため、このメッセージは警告になります。</span><span class="sxs-lookup"><span data-stu-id="a0503-108">By default, this message is a warning, because the <xref:System.ObsoleteAttribute.IsError%2A> property of <xref:System.ObsoleteAttribute> is `False`.</span></span> <span data-ttu-id="a0503-109">警告を非表示や、警告をエラーとして扱う方法の詳細については、次を参照してください。 [Visual Basic での警告の構成](/visualstudio/ide/configuring-warnings-in-visual-basic)です。</span><span class="sxs-lookup"><span data-stu-id="a0503-109">For more information about hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="ef19e-108">既定では、 <xref:System.ObsoleteAttribute.IsError%2A> の <xref:System.ObsoleteAttribute> プロパティが `False`であるため、このメッセージは警告になります。</span><span class="sxs-lookup"><span data-stu-id="ef19e-108">By default, this message is a warning, because the <xref:System.ObsoleteAttribute.IsError%2A> property of <xref:System.ObsoleteAttribute> is `False`.</span></span> <span data-ttu-id="ef19e-109">警告を非表示や、警告をエラーとして扱う方法の詳細については、次を参照してください。 [Visual Basic での警告の構成](/visualstudio/ide/configuring-warnings-in-visual-basic)です。</span><span class="sxs-lookup"><span data-stu-id="ef19e-109">For more information about hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="a0503-110">**エラー ID:** BC40000</span><span class="sxs-lookup"><span data-stu-id="a0503-110">**Error ID:** BC40000</span></span>  
+ <span data-ttu-id="ef19e-110">**エラー ID:** BC40000</span><span class="sxs-lookup"><span data-stu-id="ef19e-110">**Error ID:** BC40000</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a0503-111">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="a0503-111">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ef19e-111">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="ef19e-111">To correct this error</span></span>  
   
-1.  <span data-ttu-id="a0503-112">引用符で囲まれたエラー メッセージを確認し、適切なアクションを実行します。</span><span class="sxs-lookup"><span data-stu-id="a0503-112">Examine the quoted error message and take appropriate action.</span></span>  
+1.  <span data-ttu-id="ef19e-112">引用符で囲まれたエラー メッセージを確認し、適切な処理を行います。</span><span class="sxs-lookup"><span data-stu-id="ef19e-112">Examine the quoted error message and take appropriate action.</span></span>  
   
-2.  <span data-ttu-id="a0503-113">ソース コード参照の要素名のスペルが正しいことを確認します。</span><span class="sxs-lookup"><span data-stu-id="a0503-113">Ensure that the source code reference is spelling the element name correctly.</span></span>
+2.  <span data-ttu-id="ef19e-113">ソース コード参照の要素名のスペルが正しいことを確認します。</span><span class="sxs-lookup"><span data-stu-id="ef19e-113">Ensure that the source code reference is spelling the element name correctly.</span></span>
