--- a/docs/visual-basic/misc/bc40034.md
+++ b/docs/visual-basic/misc/bc40034.md
@@ -1,46 +1,40 @@
 ---
-title: "CLS 非準拠 &#39;MustOverride &#39;メンバーは、CLS 準拠では許可されません&lt;classname&gt;"
+title: 非 CLS 準拠&#39;MustOverride&#39;メンバーは、CLS 準拠では許可されません&lt;classname&gt;
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc40034
 - vbc40034
 helpviewer_keywords:
 - BC40034
 ms.assetid: 4eb36b3a-1bbe-4e99-9ecb-a12b8729b128
-caps.latest.revision: 
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 4f8e0432d86115f597917bd806d7974f7096c374
-ms.sourcegitcommit: 34ec7753acf76f90a0fa845235ef06663dc9e36e
+ms.openlocfilehash: fb3faa4dbe2ac226496d21ad247a0fae2b8461a9
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 12/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33634099"
 ---
-# <a name="non-cls-compliant-39mustoverride39-member-is-not-allowed-in-a-cls-compliant-ltclassnamegt"></a><span data-ttu-id="48034-102">CLS 非準拠 &#39;MustOverride &#39;メンバーは、CLS 準拠では許可されません&lt;classname&gt;</span><span class="sxs-lookup"><span data-stu-id="48034-102">Non-CLS-compliant &#39;MustOverride&#39; member is not allowed in a CLS-compliant &lt;classname&gt;</span></span>
-<span data-ttu-id="48034-103">クラスは `<CLSCompliant(True)>`としてマークされていますが、 `MustOverride` プロパティが含まれているか、 `<CLSCompliant(False)>` としてマークされているプロシージャまたはマークされていないプロシージャが含まれています。</span><span class="sxs-lookup"><span data-stu-id="48034-103">A class is marked as `<CLSCompliant(True)>`, but it contains a `MustOverride` property or procedure that is marked as `<CLSCompliant(False)>` or is not marked.</span></span>  
+# <a name="non-cls-compliant-39mustoverride39-member-is-not-allowed-in-a-cls-compliant-ltclassnamegt"></a><span data-ttu-id="a2151-102">非 CLS 準拠&#39;MustOverride&#39;メンバーは、CLS 準拠では許可されません&lt;classname&gt;</span><span class="sxs-lookup"><span data-stu-id="a2151-102">Non-CLS-compliant &#39;MustOverride&#39; member is not allowed in a CLS-compliant &lt;classname&gt;</span></span>
+<span data-ttu-id="a2151-103">クラスは `<CLSCompliant(True)>`としてマークされていますが、 `MustOverride` プロパティが含まれているか、 `<CLSCompliant(False)>` としてマークされているプロシージャまたはマークされていないプロシージャが含まれています。</span><span class="sxs-lookup"><span data-stu-id="a2151-103">A class is marked as `<CLSCompliant(True)>`, but it contains a `MustOverride` property or procedure that is marked as `<CLSCompliant(False)>` or is not marked.</span></span>  
   
- <span data-ttu-id="48034-104">クラスに準拠している場合、[言語非依存および言語非依存コンポーネント](../../standard/language-independence-and-language-independent-components.md)(CLS) に、そのクラスを使用するアプリケーションとしてもマークされているメンバーだけにアクセスする`<CLSCompliant(True)>`とメンバーを無視します。ありません。</span><span class="sxs-lookup"><span data-stu-id="48034-104">When a class is compliant with the [Language Independence and Language-Independent Components](../../standard/language-independence-and-language-independent-components.md) (CLS), an application that uses that class accesses only the members that are also marked as `<CLSCompliant(True)>` and ignores the members that are not.</span></span> <span data-ttu-id="48034-105">ただし、アプリケーションは `MustOverride` プロパティやプロシージャを無視できません。アプリケーションは、そのプロパティまたはプロシージャをオーバーライドするためにそれにアクセスする必要があるためです。</span><span class="sxs-lookup"><span data-stu-id="48034-105">However, the application cannot ignore a `MustOverride` property or procedure, because it must access that property or procedure to override it.</span></span>  
+ <span data-ttu-id="a2151-104">クラスに準拠している場合、[言語非依存および言語非依存コンポーネント](../../standard/language-independence-and-language-independent-components.md)(CLS) に、そのクラスを使用するアプリケーションとしてもマークされているメンバーだけにアクセスする`<CLSCompliant(True)>`とメンバーを無視します。ありません。</span><span class="sxs-lookup"><span data-stu-id="a2151-104">When a class is compliant with the [Language Independence and Language-Independent Components](../../standard/language-independence-and-language-independent-components.md) (CLS), an application that uses that class accesses only the members that are also marked as `<CLSCompliant(True)>` and ignores the members that are not.</span></span> <span data-ttu-id="a2151-105">ただし、アプリケーションは `MustOverride` プロパティやプロシージャを無視できません。アプリケーションは、そのプロパティまたはプロシージャをオーバーライドするためにそれにアクセスする必要があるためです。</span><span class="sxs-lookup"><span data-stu-id="a2151-105">However, the application cannot ignore a `MustOverride` property or procedure, because it must access that property or procedure to override it.</span></span>  
   
- <span data-ttu-id="48034-106">プログラミング要素に <xref:System.CLSCompliantAttribute> を適用する場合は、属性の `isCompliant` パラメーターを `True` または `False` のどちらかに設定して、準拠または非準拠を示します。</span><span class="sxs-lookup"><span data-stu-id="48034-106">When you apply the <xref:System.CLSCompliantAttribute> to a programming element, you set the attribute's `isCompliant` parameter to either `True` or `False` to indicate compliance or noncompliance.</span></span> <span data-ttu-id="48034-107">このパラメーターには既定値がありません。値を指定する必要があります。</span><span class="sxs-lookup"><span data-stu-id="48034-107">There is no default for this parameter, and you must supply a value.</span></span>  
+ <span data-ttu-id="a2151-106">プログラミング要素に <xref:System.CLSCompliantAttribute> を適用する場合は、属性の `isCompliant` パラメーターを `True` または `False` のどちらかに設定して、準拠または非準拠を示します。</span><span class="sxs-lookup"><span data-stu-id="a2151-106">When you apply the <xref:System.CLSCompliantAttribute> to a programming element, you set the attribute's `isCompliant` parameter to either `True` or `False` to indicate compliance or noncompliance.</span></span> <span data-ttu-id="a2151-107">このパラメーターには既定値がありません。値を指定する必要があります。</span><span class="sxs-lookup"><span data-stu-id="a2151-107">There is no default for this parameter, and you must supply a value.</span></span>  
   
- <span data-ttu-id="48034-108">要素に <xref:System.CLSCompliantAttribute> を適用しないと、その要素は非準拠と見なされます。</span><span class="sxs-lookup"><span data-stu-id="48034-108">If you do not apply the <xref:System.CLSCompliantAttribute> to an element, it is considered to be noncompliant.</span></span>  
+ <span data-ttu-id="a2151-108">要素に <xref:System.CLSCompliantAttribute> を適用しないと、その要素は非準拠と見なされます。</span><span class="sxs-lookup"><span data-stu-id="a2151-108">If you do not apply the <xref:System.CLSCompliantAttribute> to an element, it is considered to be noncompliant.</span></span>  
   
- <span data-ttu-id="48034-109">既定では、このメッセージは警告です。</span><span class="sxs-lookup"><span data-stu-id="48034-109">By default, this message is a warning.</span></span> <span data-ttu-id="48034-110">警告を非表示にする方法や、警告をエラーとして扱う方法の詳細については、「 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="48034-110">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="a2151-109">既定では、このメッセージは警告です。</span><span class="sxs-lookup"><span data-stu-id="a2151-109">By default, this message is a warning.</span></span> <span data-ttu-id="a2151-110">警告を非表示にする方法や、警告をエラーとして扱う方法の詳細については、「 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="a2151-110">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="48034-111">**エラー ID:** BC40034</span><span class="sxs-lookup"><span data-stu-id="48034-111">**Error ID:** BC40034</span></span>  
+ <span data-ttu-id="a2151-111">**エラー ID:** BC40034</span><span class="sxs-lookup"><span data-stu-id="a2151-111">**Error ID:** BC40034</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="48034-112">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="48034-112">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a2151-112">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="a2151-112">To correct this error</span></span>  
   
--   <span data-ttu-id="48034-113">CLS への準拠が必要なときに、クラス ソース コードを制御できる場合は、メンバーを `<CLSCompliant(True)>`としてマークします。</span><span class="sxs-lookup"><span data-stu-id="48034-113">If you require CLS compliance and have control over the class source code, mark the member as `<CLSCompliant(True)>`.</span></span>  
+-   <span data-ttu-id="a2151-113">CLS への準拠が必要なときに、クラス ソース コードを制御できる場合は、メンバーを `<CLSCompliant(True)>`としてマークします。</span><span class="sxs-lookup"><span data-stu-id="a2151-113">If you require CLS compliance and have control over the class source code, mark the member as `<CLSCompliant(True)>`.</span></span>  
   
--   <span data-ttu-id="48034-114">CLS への準拠が必要なときに、クラス ソース コードを制御できない場合や、クラス ソース コードが準拠のための要件を満たしていない場合は、このメンバーを別のクラス内で定義します。</span><span class="sxs-lookup"><span data-stu-id="48034-114">If you require CLS compliance and do not have control over the class source code, or if it does not qualify to be compliant, define this member within a different class.</span></span>  
+-   <span data-ttu-id="a2151-114">CLS への準拠が必要なときに、クラス ソース コードを制御できない場合や、クラス ソース コードが準拠のための要件を満たしていない場合は、このメンバーを別のクラス内で定義します。</span><span class="sxs-lookup"><span data-stu-id="a2151-114">If you require CLS compliance and do not have control over the class source code, or if it does not qualify to be compliant, define this member within a different class.</span></span>  
   
--   <span data-ttu-id="48034-115">このメンバーを非準拠のままにしておく必要がある場合は、このメンバーの定義から `MustOverride` キーワードを削除するか、クラス定義から <xref:System.CLSCompliantAttribute> を削除するか、クラスを `<CLSCompliant(False)>`としてマークします。</span><span class="sxs-lookup"><span data-stu-id="48034-115">If you require that this member remain noncompliant, remove the `MustOverride` keyword from its definition, remove the <xref:System.CLSCompliantAttribute> from the class definition, or mark the class as `<CLSCompliant(False)>`.</span></span>  
+-   <span data-ttu-id="a2151-115">このメンバーを非準拠のままにしておく必要がある場合は、このメンバーの定義から `MustOverride` キーワードを削除するか、クラス定義から <xref:System.CLSCompliantAttribute> を削除するか、クラスを `<CLSCompliant(False)>`としてマークします。</span><span class="sxs-lookup"><span data-stu-id="a2151-115">If you require that this member remain noncompliant, remove the `MustOverride` keyword from its definition, remove the <xref:System.CLSCompliantAttribute> from the class definition, or mark the class as `<CLSCompliant(False)>`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="48034-116">参照</span><span class="sxs-lookup"><span data-stu-id="48034-116">See Also</span></span>  
- [<span data-ttu-id="48034-117">MustOverride</span><span class="sxs-lookup"><span data-stu-id="48034-117">MustOverride</span></span>](../../visual-basic/language-reference/modifiers/mustoverride.md)  
+## <a name="see-also"></a><span data-ttu-id="a2151-116">関連項目</span><span class="sxs-lookup"><span data-stu-id="a2151-116">See Also</span></span>  
+ [<span data-ttu-id="a2151-117">MustOverride</span><span class="sxs-lookup"><span data-stu-id="a2151-117">MustOverride</span></span>](../../visual-basic/language-reference/modifiers/mustoverride.md)  
  
