--- a/docs/visual-basic/misc/bc40051.md
+++ b/docs/visual-basic/misc/bc40051.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33634268"
 ---
 # <a name="systemdiagnosticsdebuggerhiddenattribute-does-not-affect-39get39-or-39set39-when-applied-to-the-property-definition"></a><span data-ttu-id="b7ecf-102">System.Diagnostics.DebuggerHiddenAttribute は影響しません&#39;取得&#39;または&#39;設定&#39;プロパティの定義に適用される場合</span><span class="sxs-lookup"><span data-stu-id="b7ecf-102">System.Diagnostics.DebuggerHiddenAttribute does not affect &#39;Get&#39; or &#39;Set&#39; when applied to the Property definition</span></span>
 <span data-ttu-id="b7ecf-103">System.Diagnostics.DebuggerHiddenAttribute は、プロパティ定義に適用するときに 'Get' または 'Set' に影響しません。</span><span class="sxs-lookup"><span data-stu-id="b7ecf-103">System.Diagnostics.DebuggerHiddenAttribute does not affect 'Get' or 'Set' when applied to the Property definition.</span></span> <span data-ttu-id="b7ecf-104">必要に応じて、'Get' プロシージャと 'Set' プロシージャに直接属性を適用します。</span><span class="sxs-lookup"><span data-stu-id="b7ecf-104">Apply the attribute directly to the 'Get' and 'Set' procedures as appropriate.</span></span>  
