--- a/docs/visual-basic/misc/bc41006.md
+++ b/docs/visual-basic/misc/bc41006.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33634795"
 ---
 # <a name="type-arguments-inferred-for-method-39ltprocedurenamegt39-result-in-the-following-warnings-ltwarninglistgt"></a><span data-ttu-id="2dfe0-102">引数から推論されるメソッドの入力&#39; &lt;procedurename&gt; &#39;で次の警告を表示:&lt;warninglist&gt;</span><span class="sxs-lookup"><span data-stu-id="2dfe0-102">Type arguments inferred for method &#39;&lt;procedurename&gt;&#39; result in the following warnings :&lt;warninglist&gt;</span></span>
 <span data-ttu-id="2dfe0-103">ジェネリック プロシージャが型引数を指定せずに呼び出され、推定された型引数によって 1 つ以上の警告が生成されました。</span><span class="sxs-lookup"><span data-stu-id="2dfe0-103">A generic procedure is called without supplying any type arguments, and the inferred type arguments result in one or more warnings.</span></span>  
