--- a/docs/visual-basic/misc/bc31028.md
+++ b/docs/visual-basic/misc/bc31028.md
@@ -1,46 +1,40 @@
 ---
-title: "サインオン ファイル &#39; にできません。&lt;filename&gt;&#39;:&lt;エラー&gt;"
+title: ファイルに署名できません&#39; &lt;filename&gt;&#39;:&lt;エラー&gt;
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc31028
 - vbc31028
 helpviewer_keywords:
 - BC31028
 ms.assetid: 2cb22e75-5ee2-4e07-afc0-680a0bd543d4
-caps.latest.revision: 
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: a5328b5d52919cd55239496f9429c919557c75fc
-ms.sourcegitcommit: c0dd436f6f8f44dc80dc43b07f6841a00b74b23f
+ms.openlocfilehash: 7827826f157b27fe80f87dbd561dfe569e665f3e
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 01/19/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33619718"
 ---
-# <a name="unable-to-sign-file-39ltfilenamegt39-lterrorgt"></a><span data-ttu-id="6e066-102">サインオン ファイル &#39; にできません。&lt;filename&gt;&#39;:&lt;エラー&gt;</span><span class="sxs-lookup"><span data-stu-id="6e066-102">Unable to sign file &#39;&lt;filename&gt;&#39;: &lt;error&gt;</span></span>
-<span data-ttu-id="6e066-103">指定したファイルに署名しようとするときに、エラーが発生しました。</span><span class="sxs-lookup"><span data-stu-id="6e066-103">An error occurred when trying to sign the specified file.</span></span> <span data-ttu-id="6e066-104">このエラーには、いくつかの原因の可能性があります。</span><span class="sxs-lookup"><span data-stu-id="6e066-104">This error may have occurred for several reasons:</span></span>  
+# <a name="unable-to-sign-file-39ltfilenamegt39-lterrorgt"></a><span data-ttu-id="c69b8-102">ファイルに署名できません&#39; &lt;filename&gt;&#39;:&lt;エラー&gt;</span><span class="sxs-lookup"><span data-stu-id="c69b8-102">Unable to sign file &#39;&lt;filename&gt;&#39;: &lt;error&gt;</span></span>
+<span data-ttu-id="c69b8-103">指定したファイルに署名しようとするときに、エラーが発生しました。</span><span class="sxs-lookup"><span data-stu-id="c69b8-103">An error occurred when trying to sign the specified file.</span></span> <span data-ttu-id="c69b8-104">このエラーには、いくつかの原因の可能性があります。</span><span class="sxs-lookup"><span data-stu-id="c69b8-104">This error may have occurred for several reasons:</span></span>  
   
--   <span data-ttu-id="6e066-105">アクセス許可が不十分です。</span><span class="sxs-lookup"><span data-stu-id="6e066-105">Insufficient permissions.</span></span>  
+-   <span data-ttu-id="c69b8-105">アクセス許可が不十分です。</span><span class="sxs-lookup"><span data-stu-id="c69b8-105">Insufficient permissions.</span></span>  
   
--   <span data-ttu-id="6e066-106">Authenticode 署名に必要なシステム ファイルが不足しています。</span><span class="sxs-lookup"><span data-stu-id="6e066-106">Missing system files required for Authenticode signing.</span></span>  
+-   <span data-ttu-id="c69b8-106">Authenticode 署名に必要なシステム ファイルが不足しています。</span><span class="sxs-lookup"><span data-stu-id="c69b8-106">Missing system files required for Authenticode signing.</span></span>  
   
--   <span data-ttu-id="6e066-107">存在しない証明書または秘密キー ファイルへの参照があります。</span><span class="sxs-lookup"><span data-stu-id="6e066-107">A reference to a non-existent certificate or private-key file.</span></span>  
+-   <span data-ttu-id="c69b8-107">存在しない証明書または秘密キー ファイルへの参照があります。</span><span class="sxs-lookup"><span data-stu-id="c69b8-107">A reference to a non-existent certificate or private-key file.</span></span>  
   
--   <span data-ttu-id="6e066-108">ファイル名または URL のスペルが間違っています。</span><span class="sxs-lookup"><span data-stu-id="6e066-108">Incorrect spelling of a file name or URL.</span></span>  
+-   <span data-ttu-id="c69b8-108">ファイル名または URL のスペルが間違っています。</span><span class="sxs-lookup"><span data-stu-id="c69b8-108">Incorrect spelling of a file name or URL.</span></span>  
   
- <span data-ttu-id="6e066-109">**エラー ID:** BC31028</span><span class="sxs-lookup"><span data-stu-id="6e066-109">**Error ID:** BC31028</span></span>  
+ <span data-ttu-id="c69b8-109">**エラー ID:** BC31028</span><span class="sxs-lookup"><span data-stu-id="c69b8-109">**Error ID:** BC31028</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="6e066-110">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="6e066-110">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="c69b8-110">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="c69b8-110">To correct this error</span></span>  
   
-1.  <span data-ttu-id="6e066-111">正しい証明書と秘密キーのファイル名を入力します。</span><span class="sxs-lookup"><span data-stu-id="6e066-111">Enter correct certificate and private key file names.</span></span>  
+1.  <span data-ttu-id="c69b8-111">正しい証明書と秘密キーのファイル名を入力します。</span><span class="sxs-lookup"><span data-stu-id="c69b8-111">Enter correct certificate and private key file names.</span></span>  
   
-2.  <span data-ttu-id="6e066-112">Authenticode 署名を使用している場合は、ファイル Signcode.exe および Javasign.dll が存在することと、その読み取り専用属性が設定されていないことを確認します。</span><span class="sxs-lookup"><span data-stu-id="6e066-112">If you are using Authenticode signing, check that the files, Signcode.exe and Javasign.dll, are present, and that their read-only attribute is not set.</span></span>  
+2.  <span data-ttu-id="c69b8-112">Authenticode 署名を使用している場合は、ファイル Signcode.exe および Javasign.dll が存在することと、その読み取り専用属性が設定されていないことを確認します。</span><span class="sxs-lookup"><span data-stu-id="c69b8-112">If you are using Authenticode signing, check that the files, Signcode.exe and Javasign.dll, are present, and that their read-only attribute is not set.</span></span>  
   
-3.  <span data-ttu-id="6e066-113">ファイルへの `Write` アクセス許可があることを確認します。</span><span class="sxs-lookup"><span data-stu-id="6e066-113">Make sure you have `Write` permission to the file.</span></span>  
+3.  <span data-ttu-id="c69b8-113">ファイルへの `Write` アクセス許可があることを確認します。</span><span class="sxs-lookup"><span data-stu-id="c69b8-113">Make sure you have `Write` permission to the file.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="6e066-114">参照</span><span class="sxs-lookup"><span data-stu-id="6e066-114">See Also</span></span>  
- [<span data-ttu-id="6e066-115">署名ツール (Signcode.exe) ファイル</span><span class="sxs-lookup"><span data-stu-id="6e066-115">File Signing Tool (Signcode.exe)</span></span>](http://msdn.microsoft.com/library/2d299154-34ea-41ba-ad12-17075bb7e1db)  
- [<span data-ttu-id="6e066-116">配置と Authenticode の署名</span><span class="sxs-lookup"><span data-stu-id="6e066-116">Deployment and Authenticode Signing</span></span>](http://msdn.microsoft.com/library/ecc3f059-da2e-445b-9b87-5b2978e2f8b2)
+## <a name="see-also"></a><span data-ttu-id="c69b8-114">関連項目</span><span class="sxs-lookup"><span data-stu-id="c69b8-114">See Also</span></span>  
+ [<span data-ttu-id="c69b8-115">署名ツール (Signcode.exe) ファイル</span><span class="sxs-lookup"><span data-stu-id="c69b8-115">File Signing Tool (Signcode.exe)</span></span>](http://msdn.microsoft.com/library/2d299154-34ea-41ba-ad12-17075bb7e1db)  
+ [<span data-ttu-id="c69b8-116">配置と Authenticode の署名</span><span class="sxs-lookup"><span data-stu-id="c69b8-116">Deployment and Authenticode Signing</span></span>](http://msdn.microsoft.com/library/ecc3f059-da2e-445b-9b87-5b2978e2f8b2)
