--- a/docs/visual-basic/misc/bc31086.md
+++ b/docs/visual-basic/misc/bc31086.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33620215"
 ---
 # <a name="39lttype1gt39-cannot-override-lttype2gt-because-it-is-not-declared-39overridable39"></a><span data-ttu-id="c9a93-102">&#39;&lt;type1&gt; &#39;オーバーライドできません&lt;type2&gt;宣言されていないため&#39;Overridable&#39;</span><span class="sxs-lookup"><span data-stu-id="c9a93-102">&#39;&lt;type1&gt;&#39; cannot override &lt;type2&gt; because it is not declared &#39;Overridable&#39;</span></span>
 <span data-ttu-id="c9a93-103">派生クラス内のメンバーで、 `Overridable` 修飾子でマークされていない基底クラスのメンバーをオーバーライドします。</span><span class="sxs-lookup"><span data-stu-id="c9a93-103">A member in a derived class overrides a base class member that is not marked with the `Overridable` modifier.</span></span>  
