--- a/docs/visual-basic/misc/bc31099.md
+++ b/docs/visual-basic/misc/bc31099.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33622955"
 ---
 # <a name="property-accessors-cannot-be-declared-39ltkeywordgt39"></a><span data-ttu-id="984d4-102">プロパティ アクセサーを宣言することはできません&#39;&lt;キーワード&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="984d4-102">Property accessors cannot be declared &#39;&lt;keyword&gt;&#39;</span></span>
 <span data-ttu-id="984d4-103">`Get` プロシージャまたは `Set` プロシージャの宣言には、プロパティ プロシージャで無効なキーワードが含まれています。</span><span class="sxs-lookup"><span data-stu-id="984d4-103">A `Get` or `Set` procedure declaration includes a keyword that is not valid on a property procedure.</span></span>  
