--- a/docs/visual-basic/misc/bc31154.md
+++ b/docs/visual-basic/misc/bc31154.md
@@ -1,35 +1,29 @@
 ---
-title: 属性 &#39; attributeName &#39; XML 宣言が許可しません。
+title: XML 宣言が属性を許可しない&#39;attributeName&#39;
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc31154
 - vbc31154
 helpviewer_keywords:
 - BC31154
 ms.assetid: 23fe6642-ed8b-4629-998b-6f06799ef4b8
-caps.latest.revision: 4
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 413c8e7b06aa1e5298d31f4c07095a264adb46b5
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: 5418fddf6b705f0d2396dfb5621e846047e87469
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33622224"
 ---
-# <a name="xml-declaration-does-not-allow-attribute-39attributename39"></a><span data-ttu-id="57dd8-102">属性 &#39; attributeName &#39; XML 宣言が許可しません。</span><span class="sxs-lookup"><span data-stu-id="57dd8-102">XML declaration does not allow attribute &#39;attributeName&#39;</span></span>
-<span data-ttu-id="57dd8-103">XML ドキュメント リテラルに無効な属性が指定されています。</span><span class="sxs-lookup"><span data-stu-id="57dd8-103">An invalid attribute for an XML document literal has been specified.</span></span> <span data-ttu-id="57dd8-104">XML ドキュメント リテラルの有効な属性値は、XML 1.0 仕様に基づきます。</span><span class="sxs-lookup"><span data-stu-id="57dd8-104">Valid attribute values for an XML document literal are based on the XML 1.0 specification.</span></span>  
+# <a name="xml-declaration-does-not-allow-attribute-39attributename39"></a><span data-ttu-id="37aba-102">XML 宣言が属性を許可しない&#39;attributeName&#39;</span><span class="sxs-lookup"><span data-stu-id="37aba-102">XML declaration does not allow attribute &#39;attributeName&#39;</span></span>
+<span data-ttu-id="37aba-103">XML ドキュメント リテラルに無効な属性が指定されています。</span><span class="sxs-lookup"><span data-stu-id="37aba-103">An invalid attribute for an XML document literal has been specified.</span></span> <span data-ttu-id="37aba-104">XML ドキュメント リテラルの有効な属性値は、XML 1.0 仕様に基づきます。</span><span class="sxs-lookup"><span data-stu-id="37aba-104">Valid attribute values for an XML document literal are based on the XML 1.0 specification.</span></span>  
   
- <span data-ttu-id="57dd8-105">**エラー ID:** BC31154</span><span class="sxs-lookup"><span data-stu-id="57dd8-105">**Error ID:** BC31154</span></span>  
+ <span data-ttu-id="37aba-105">**エラー ID:** BC31154</span><span class="sxs-lookup"><span data-stu-id="37aba-105">**Error ID:** BC31154</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="57dd8-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="57dd8-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="37aba-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="37aba-106">To correct this error</span></span>  
   
--   <span data-ttu-id="57dd8-107">XML ドキュメント リテラルから無効な属性を削除します。</span><span class="sxs-lookup"><span data-stu-id="57dd8-107">Remove the invalid attribute from the XML document literal.</span></span>  
+-   <span data-ttu-id="37aba-107">XML ドキュメント リテラルから無効な属性を削除します。</span><span class="sxs-lookup"><span data-stu-id="37aba-107">Remove the invalid attribute from the XML document literal.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="57dd8-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="57dd8-108">See Also</span></span>  
- [<span data-ttu-id="57dd8-109">XML リテラルと XML 1.0 仕様</span><span class="sxs-lookup"><span data-stu-id="57dd8-109">XML Literals and the XML 1.0 Specification</span></span>](../../visual-basic/programming-guide/language-features/xml/xml-literals-and-the-xml-1-0-specification.md)  
- [<span data-ttu-id="57dd8-110">XML リテラル</span><span class="sxs-lookup"><span data-stu-id="57dd8-110">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)  
- [<span data-ttu-id="57dd8-111">XML</span><span class="sxs-lookup"><span data-stu-id="57dd8-111">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
+## <a name="see-also"></a><span data-ttu-id="37aba-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="37aba-108">See Also</span></span>  
+ [<span data-ttu-id="37aba-109">XML リテラルと XML 1.0 仕様</span><span class="sxs-lookup"><span data-stu-id="37aba-109">XML Literals and the XML 1.0 Specification</span></span>](../../visual-basic/programming-guide/language-features/xml/xml-literals-and-the-xml-1-0-specification.md)  
+ [<span data-ttu-id="37aba-110">XML リテラル</span><span class="sxs-lookup"><span data-stu-id="37aba-110">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)  
+ [<span data-ttu-id="37aba-111">XML</span><span class="sxs-lookup"><span data-stu-id="37aba-111">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
