--- a/docs/visual-basic/misc/bc31163.md
+++ b/docs/visual-basic/misc/bc31163.md
@@ -1,34 +1,28 @@
 ---
 title: XML 属性値の終わりに、対応する単一引用符が必要です
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc31163
 - vbc31163
 helpviewer_keywords:
 - BC31163
 ms.assetid: 8654ba6d-8e58-40f5-a2e7-6ee08ec1c577
-caps.latest.revision: 4
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: e35f4dcd8c5b3c26779fc1f8dfb7e4d34ab14a2a
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: ebd2650b87ab036459f07543e36b883fef622ae8
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33622783"
 ---
-# <a name="expected-matching-closing-single-quote-for-xml-attribute-value"></a><span data-ttu-id="a3d44-102">XML 属性値の終わりに、対応する単一引用符が必要です</span><span class="sxs-lookup"><span data-stu-id="a3d44-102">Expected matching closing single quote for XML attribute value</span></span>
-<span data-ttu-id="a3d44-103">単一引用符で区切られた属性値に、終わりの引用符文字がありません。</span><span class="sxs-lookup"><span data-stu-id="a3d44-103">An attribute value that is delimited by single quotation marks is missing the closing quotation mark character.</span></span>  
+# <a name="expected-matching-closing-single-quote-for-xml-attribute-value"></a><span data-ttu-id="d597f-102">XML 属性値の終わりに、対応する単一引用符が必要です</span><span class="sxs-lookup"><span data-stu-id="d597f-102">Expected matching closing single quote for XML attribute value</span></span>
+<span data-ttu-id="d597f-103">単一引用符で区切られた属性値に、終わりの引用符文字がありません。</span><span class="sxs-lookup"><span data-stu-id="d597f-103">An attribute value that is delimited by single quotation marks is missing the closing quotation mark character.</span></span>  
   
- <span data-ttu-id="a3d44-104">**エラー ID:** BC31163</span><span class="sxs-lookup"><span data-stu-id="a3d44-104">**Error ID:** BC31163</span></span>  
+ <span data-ttu-id="d597f-104">**エラー ID:** BC31163</span><span class="sxs-lookup"><span data-stu-id="d597f-104">**Error ID:** BC31163</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a3d44-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="a3d44-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d597f-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="d597f-105">To correct this error</span></span>  
   
--   <span data-ttu-id="a3d44-106">属性値を区切るための終わりの単一引用符文字 (') を追加します。</span><span class="sxs-lookup"><span data-stu-id="a3d44-106">Add the closing single quotation mark character (') to delimit the attribute value.</span></span>  
+-   <span data-ttu-id="d597f-106">属性値を区切るための終わりの単一引用符文字 (') を追加します。</span><span class="sxs-lookup"><span data-stu-id="d597f-106">Add the closing single quotation mark character (') to delimit the attribute value.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="a3d44-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="a3d44-107">See Also</span></span>  
- [<span data-ttu-id="a3d44-108">XML リテラル</span><span class="sxs-lookup"><span data-stu-id="a3d44-108">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)  
- [<span data-ttu-id="a3d44-109">XML</span><span class="sxs-lookup"><span data-stu-id="a3d44-109">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
+## <a name="see-also"></a><span data-ttu-id="d597f-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="d597f-107">See Also</span></span>  
+ [<span data-ttu-id="d597f-108">XML リテラル</span><span class="sxs-lookup"><span data-stu-id="d597f-108">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)  
+ [<span data-ttu-id="d597f-109">XML</span><span class="sxs-lookup"><span data-stu-id="d597f-109">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
