--- a/docs/visual-basic/misc/bc31164.md
+++ b/docs/visual-basic/misc/bc31164.md
@@ -1,34 +1,28 @@
 ---
 title: XML 属性値の終わりに、対応する二重引用符が必要です。
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc31164
 - vbc31164
 helpviewer_keywords:
 - BC31164
 ms.assetid: 65212e42-f9f2-4779-9654-a9d1962ddde7
-caps.latest.revision: 4
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 0061cb6dd4610914dc8073c4eed2558052f126dc
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: 9b9f778520a6d10bed5e9ca67a05cf1a96a0873a
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33621909"
 ---
-# <a name="expected-matching-closing-double-quote-for-xml-attribute-value"></a><span data-ttu-id="f62a8-102">XML 属性値の終わりに、対応する二重引用符が必要です。</span><span class="sxs-lookup"><span data-stu-id="f62a8-102">Expected matching closing double quote for XML attribute value</span></span>
-<span data-ttu-id="f62a8-103">二重引用符で区切られた属性値に、終わりの引用符文字がありません。</span><span class="sxs-lookup"><span data-stu-id="f62a8-103">An attribute value that is delimited by double quotation marks is missing the closing quotation mark character.</span></span>  
+# <a name="expected-matching-closing-double-quote-for-xml-attribute-value"></a><span data-ttu-id="e69ef-102">XML 属性値の終わりに、対応する二重引用符が必要です。</span><span class="sxs-lookup"><span data-stu-id="e69ef-102">Expected matching closing double quote for XML attribute value</span></span>
+<span data-ttu-id="e69ef-103">二重引用符で区切られた属性値に、終わりの引用符文字がありません。</span><span class="sxs-lookup"><span data-stu-id="e69ef-103">An attribute value that is delimited by double quotation marks is missing the closing quotation mark character.</span></span>  
   
- <span data-ttu-id="f62a8-104">**エラー ID:** BC31164</span><span class="sxs-lookup"><span data-stu-id="f62a8-104">**Error ID:** BC31164</span></span>  
+ <span data-ttu-id="e69ef-104">**エラー ID:** BC31164</span><span class="sxs-lookup"><span data-stu-id="e69ef-104">**Error ID:** BC31164</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="f62a8-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="f62a8-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e69ef-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="e69ef-105">To correct this error</span></span>  
   
--   <span data-ttu-id="f62a8-106">属性値を区切るための終わりの二重引用符文字を追加します。</span><span class="sxs-lookup"><span data-stu-id="f62a8-106">Add the closing double quotation mark character to delimit the attribute value.</span></span>  
+-   <span data-ttu-id="e69ef-106">属性値を区切るための終わりの二重引用符文字を追加します。</span><span class="sxs-lookup"><span data-stu-id="e69ef-106">Add the closing double quotation mark character to delimit the attribute value.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="f62a8-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="f62a8-107">See Also</span></span>  
- [<span data-ttu-id="f62a8-108">XML リテラル</span><span class="sxs-lookup"><span data-stu-id="f62a8-108">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)  
- [<span data-ttu-id="f62a8-109">XML</span><span class="sxs-lookup"><span data-stu-id="f62a8-109">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
+## <a name="see-also"></a><span data-ttu-id="e69ef-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="e69ef-107">See Also</span></span>  
+ [<span data-ttu-id="e69ef-108">XML リテラル</span><span class="sxs-lookup"><span data-stu-id="e69ef-108">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)  
+ [<span data-ttu-id="e69ef-109">XML</span><span class="sxs-lookup"><span data-stu-id="e69ef-109">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
