--- a/docs/visual-basic/misc/bc31179.md
+++ b/docs/visual-basic/misc/bc31179.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33622929"
 ---
 # <a name="expected-3939-at-start-of-an-embedded-expression"></a><span data-ttu-id="6bbbc-102">予想&#39;% =&#39;埋め込み式の開始時に</span><span class="sxs-lookup"><span data-stu-id="6bbbc-102">Expected &#39;%=&#39; at start of an embedded expression</span></span>
 <span data-ttu-id="6bbbc-103">埋め込み式の始まりを示す識別子 `<%=`が正しくコード化されていません。</span><span class="sxs-lookup"><span data-stu-id="6bbbc-103">The start identifier for an embedded expression, `<%=`, has not been coded correctly.</span></span> <span data-ttu-id="6bbbc-104">リテラル XML 要素の名前には、パーセント文字 (%) を使用できないことに注意してください。</span><span class="sxs-lookup"><span data-stu-id="6bbbc-104">Note that you cannot use a percent character (%) in the name for an XML element literal.</span></span>  
