--- a/docs/visual-basic/misc/bc31181.md
+++ b/docs/visual-basic/misc/bc31181.md
@@ -1,35 +1,29 @@
 ---
-title: 属性の値が無効です。指定してください &#39; 値 &#39;
+title: 属性の値が無効です。指定してください&#39;値&#39;
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc31181
 - bc31181
 helpviewer_keywords:
 - BC31181
 ms.assetid: 37137965-bba1-45ee-b4e9-1bf2d5388802
-caps.latest.revision: 6
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 485a02fa44b79adfd2c53715777671774733ef8c
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: 15de6e5bc85dccb420d3d4d04d7f85a4d5dd7c24
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33621961"
 ---
-# <a name="attribute-value-is-not-valid-expecting-39value39"></a><span data-ttu-id="49103-102">属性の値が無効です。指定してください &#39; 値 &#39;</span><span class="sxs-lookup"><span data-stu-id="49103-102">Attribute value is not valid; expecting &#39;value&#39;</span></span>
-<span data-ttu-id="49103-103">XML ドキュメント リテラルに、無効な属性の値が指定されています。</span><span class="sxs-lookup"><span data-stu-id="49103-103">An invalid value for an attribute in an XML document literal has been specified.</span></span> <span data-ttu-id="49103-104">XML ドキュメント リテラルの有効な属性値は、XML 1.0 仕様で指定されています。</span><span class="sxs-lookup"><span data-stu-id="49103-104">Valid attribute values for an XML document literal are specified in the XML 1.0 specification.</span></span>  
+# <a name="attribute-value-is-not-valid-expecting-39value39"></a><span data-ttu-id="30ea8-102">属性の値が無効です。指定してください&#39;値&#39;</span><span class="sxs-lookup"><span data-stu-id="30ea8-102">Attribute value is not valid; expecting &#39;value&#39;</span></span>
+<span data-ttu-id="30ea8-103">XML ドキュメント リテラルに、無効な属性の値が指定されています。</span><span class="sxs-lookup"><span data-stu-id="30ea8-103">An invalid value for an attribute in an XML document literal has been specified.</span></span> <span data-ttu-id="30ea8-104">XML ドキュメント リテラルの有効な属性値は、XML 1.0 仕様で指定されています。</span><span class="sxs-lookup"><span data-stu-id="30ea8-104">Valid attribute values for an XML document literal are specified in the XML 1.0 specification.</span></span>  
   
- <span data-ttu-id="49103-105">**エラー ID:** BC31181</span><span class="sxs-lookup"><span data-stu-id="49103-105">**Error ID:** BC31181</span></span>  
+ <span data-ttu-id="30ea8-105">**エラー ID:** BC31181</span><span class="sxs-lookup"><span data-stu-id="30ea8-105">**Error ID:** BC31181</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="49103-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="49103-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="30ea8-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="30ea8-106">To correct this error</span></span>  
   
--   <span data-ttu-id="49103-107">属性値を XML 1.0 仕様で指定されている有効な値に更新します。</span><span class="sxs-lookup"><span data-stu-id="49103-107">Update the attribute value to a valid value, as specified in the XML 1.0 specification.</span></span>  
+-   <span data-ttu-id="30ea8-107">属性値を XML 1.0 仕様で指定されている有効な値に更新します。</span><span class="sxs-lookup"><span data-stu-id="30ea8-107">Update the attribute value to a valid value, as specified in the XML 1.0 specification.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="49103-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="49103-108">See Also</span></span>  
- [<span data-ttu-id="49103-109">XML リテラルと XML 1.0 仕様</span><span class="sxs-lookup"><span data-stu-id="49103-109">XML Literals and the XML 1.0 Specification</span></span>](../../visual-basic/programming-guide/language-features/xml/xml-literals-and-the-xml-1-0-specification.md)  
- [<span data-ttu-id="49103-110">XML リテラル</span><span class="sxs-lookup"><span data-stu-id="49103-110">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)  
- [<span data-ttu-id="49103-111">XML</span><span class="sxs-lookup"><span data-stu-id="49103-111">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
+## <a name="see-also"></a><span data-ttu-id="30ea8-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="30ea8-108">See Also</span></span>  
+ [<span data-ttu-id="30ea8-109">XML リテラルと XML 1.0 仕様</span><span class="sxs-lookup"><span data-stu-id="30ea8-109">XML Literals and the XML 1.0 Specification</span></span>](../../visual-basic/programming-guide/language-features/xml/xml-literals-and-the-xml-1-0-specification.md)  
+ [<span data-ttu-id="30ea8-110">XML リテラル</span><span class="sxs-lookup"><span data-stu-id="30ea8-110">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)  
+ [<span data-ttu-id="30ea8-111">XML</span><span class="sxs-lookup"><span data-stu-id="30ea8-111">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
