--- a/docs/visual-basic/misc/bc31517.md
+++ b/docs/visual-basic/misc/bc31517.md
@@ -1,33 +1,27 @@
 ---
-title: 型 &#39;&lt;typename&gt;&#39; ため、属性として使用することはできません、コンテナー &#39;&lt;containername&gt;&#39; が宣言されていない &#39;です。パブリック &#39;
+title: 型&#39; &lt;typename&gt; &#39;ため、属性として使用することはできません、コンテナー &#39; &lt;containername&gt; &#39;が宣言されていない&#39;パブリック&#39;
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc31517
 - vbc31517
 helpviewer_keywords:
 - BC31517
 ms.assetid: 3d1a8f41-8652-4e37-a6bd-40b0ad306c6f
-caps.latest.revision: 7
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: ebb84c091dda590f7a1d18fd8aea4ec8924d2037
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 8f6c597b2472e41cb21fdfb7e5c0139698e0d734
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33623946"
 ---
-# <a name="type-39lttypenamegt39-cannot-be-used-as-an-attribute-because-its-container-39ltcontainernamegt39-is-not-declared-39public39"></a><span data-ttu-id="46d72-102">型 &#39;&lt;typename&gt;&#39; ため、属性として使用することはできません、コンテナー &#39;&lt;containername&gt;&#39; が宣言されていない &#39;です。パブリック &#39;</span><span class="sxs-lookup"><span data-stu-id="46d72-102">Type &#39;&lt;typename&gt;&#39; cannot be used as an attribute because its container &#39;&lt;containername&gt;&#39; is not declared &#39;Public&#39;</span></span>
-<span data-ttu-id="46d72-103">この属性が定義されているクラスまたはモジュールが `Public` 修飾子を使用して宣言されていません。</span><span class="sxs-lookup"><span data-stu-id="46d72-103">The class or module where this attribute is defined is not declared using the `Public` modifier.</span></span> <span data-ttu-id="46d72-104">アクセス修飾子が指定されていないクラスとモジュールは、既定で `Friend` として宣言されます。</span><span class="sxs-lookup"><span data-stu-id="46d72-104">Classes and modules that do not specify an access modifier are declared as `Friend` by default.</span></span>  
+# <a name="type-39lttypenamegt39-cannot-be-used-as-an-attribute-because-its-container-39ltcontainernamegt39-is-not-declared-39public39"></a><span data-ttu-id="0bc9b-102">型&#39; &lt;typename&gt; &#39;ため、属性として使用することはできません、コンテナー &#39; &lt;containername&gt; &#39;が宣言されていない&#39;パブリック&#39;</span><span class="sxs-lookup"><span data-stu-id="0bc9b-102">Type &#39;&lt;typename&gt;&#39; cannot be used as an attribute because its container &#39;&lt;containername&gt;&#39; is not declared &#39;Public&#39;</span></span>
+<span data-ttu-id="0bc9b-103">この属性が定義されているクラスまたはモジュールが `Public` 修飾子を使用して宣言されていません。</span><span class="sxs-lookup"><span data-stu-id="0bc9b-103">The class or module where this attribute is defined is not declared using the `Public` modifier.</span></span> <span data-ttu-id="0bc9b-104">アクセス修飾子が指定されていないクラスとモジュールは、既定で `Friend` として宣言されます。</span><span class="sxs-lookup"><span data-stu-id="0bc9b-104">Classes and modules that do not specify an access modifier are declared as `Friend` by default.</span></span>  
   
- <span data-ttu-id="46d72-105">**エラー ID:** BC31517</span><span class="sxs-lookup"><span data-stu-id="46d72-105">**Error ID:** BC31517</span></span>  
+ <span data-ttu-id="0bc9b-105">**エラー ID:** BC31517</span><span class="sxs-lookup"><span data-stu-id="0bc9b-105">**Error ID:** BC31517</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="46d72-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="46d72-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="0bc9b-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="0bc9b-106">To correct this error</span></span>  
   
-1.  <span data-ttu-id="46d72-107">この属性が定義されているクラスまたはモジュールに `Public` 修飾子を追加します。</span><span class="sxs-lookup"><span data-stu-id="46d72-107">Add the `Public` modifier to the class or module where this attribute is defined.</span></span>  
+1.  <span data-ttu-id="0bc9b-107">この属性が定義されているクラスまたはモジュールに `Public` 修飾子を追加します。</span><span class="sxs-lookup"><span data-stu-id="0bc9b-107">Add the `Public` modifier to the class or module where this attribute is defined.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="46d72-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="46d72-108">See Also</span></span>  
- [<span data-ttu-id="46d72-109">Public</span><span class="sxs-lookup"><span data-stu-id="46d72-109">Public</span></span>](../../visual-basic/language-reference/modifiers/public.md)
+## <a name="see-also"></a><span data-ttu-id="0bc9b-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="0bc9b-108">See Also</span></span>  
+ [<span data-ttu-id="0bc9b-109">Public</span><span class="sxs-lookup"><span data-stu-id="0bc9b-109">Public</span></span>](../../visual-basic/language-reference/modifiers/public.md)
