--- a/docs/visual-basic/misc/bc31528.md
+++ b/docs/visual-basic/misc/bc31528.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33624879"
 ---
 # <a name="construct-makes-an-indirect-reference-to-assembly-39ltassemblynamegt39-which-contains-39lttypenamegt39"></a><span data-ttu-id="97f63-102">コンス トラクターは、アセンブリへの間接参照&#39; &lt;assemblyname&gt;&#39;が含まれている&#39; &lt;typename&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="97f63-102">Construct makes an indirect reference to assembly &#39;&lt;assemblyname&gt;&#39;, which contains &#39;&lt;typename&gt;&#39;</span></span>
 <span data-ttu-id="97f63-103">コンス トラクターは、アセンブリへの間接参照 '\<assemblyname >' が含まれている\<型名 >。</span><span class="sxs-lookup"><span data-stu-id="97f63-103">Construct makes an indirect reference to assembly '\<assemblyname>', which contains \<typename>.</span></span> <span data-ttu-id="97f63-104">ファイル参照を追加\<ファイル名 > をプロジェクトにします。</span><span class="sxs-lookup"><span data-stu-id="97f63-104">Add a file reference to \<filename> to your project.</span></span>  
