--- a/docs/visual-basic/misc/bc32023.md
+++ b/docs/visual-basic/misc/bc32023.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33625195"
 ---
 # <a name="expression-is-of-type-39lttypenamegt39-which-is-not-a-collection-type"></a><span data-ttu-id="54e02-102">式の型は&#39; &lt;typename&gt;&#39;、コレクション型ではないです。</span><span class="sxs-lookup"><span data-stu-id="54e02-102">Expression is of type &#39;&lt;typename&gt;&#39;, which is not a collection type</span></span>
 <span data-ttu-id="54e02-103">`For Each` ステートメントで指定されたグループ変数は、コレクション オブジェクトまたは配列ではなく、その型が <xref:System.Collections.IEnumerable> インターフェイスを実装していません。</span><span class="sxs-lookup"><span data-stu-id="54e02-103">The group variable specified in a `For Each` statement is not a collection object or an array, and its type does not implement the <xref:System.Collections.IEnumerable> interface.</span></span> <span data-ttu-id="54e02-104">型の Visual Basic のコレクションのデザイン パターンをサポートするか実装する必要があります<xref:System.Collections.IEnumerable>です。</span><span class="sxs-lookup"><span data-stu-id="54e02-104">The type must either support the Visual Basic collection design pattern or implement <xref:System.Collections.IEnumerable>.</span></span>  
