--- a/docs/visual-basic/misc/bc32060.md
+++ b/docs/visual-basic/misc/bc32060.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33627317"
 ---
 # <a name="type-constraint-cannot-be-a-39notinheritable39-class"></a><span data-ttu-id="cafd2-102">型の制約をすることはできません、 &#39;NotInheritable&#39;クラス</span><span class="sxs-lookup"><span data-stu-id="cafd2-102">Type constraint cannot be a &#39;NotInheritable&#39; class</span></span>
 <span data-ttu-id="cafd2-103">制約リストに [NotInheritable](../../visual-basic/language-reference/modifiers/notinheritable.md)としてマークされているクラスが含まれています。</span><span class="sxs-lookup"><span data-stu-id="cafd2-103">A constraint list includes a class that is marked as [NotInheritable](../../visual-basic/language-reference/modifiers/notinheritable.md).</span></span>  
