--- a/docs/visual-basic/misc/bc32077.md
+++ b/docs/visual-basic/misc/bc32077.md
@@ -1,41 +1,35 @@
 ---
-title: '&#39;です。&lt;procedurename&gt;&#39; できません上書き &#39;&lt;baseprocedurename&gt;&#39;型パラメーター制約が異なるためです。'
+title: '&#39;&lt;procedurename&gt; &#39;オーバーライドできません&#39; &lt;baseprocedurename&gt; &#39;が異なるため、型パラメーターの制約'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - BC32077
 - vbc32077
 helpviewer_keywords:
 - BC32077
 ms.assetid: 9be1a88d-c1a4-4f12-8e72-74abb2be565d
-caps.latest.revision: 10
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 0d261a89d92330d892f90348fd5b753e35bf58f0
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 77ffd80a90cc31b3f93745ac497526157f554ead
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33628441"
 ---
-# <a name="39ltprocedurenamegt39-cannot-override-39ltbaseprocedurenamegt39-because-they-differ-by-type-parameter-constraints"></a><span data-ttu-id="f67c1-102">&#39;です。&lt;procedurename&gt;&#39; できません上書き &#39;&lt;baseprocedurename&gt;&#39;型パラメーター制約が異なるためです。</span><span class="sxs-lookup"><span data-stu-id="f67c1-102">&#39;&lt;procedurename&gt;&#39; cannot override &#39;&lt;baseprocedurename&gt;&#39; because they differ by type parameter constraints</span></span>
-<span data-ttu-id="f67c1-103">ジェネリック プロシージャはジェネリック基底クラスのプロシージャをオーバーライドしようとしますが、それらの型パラメーターの制約リストが異なります。</span><span class="sxs-lookup"><span data-stu-id="f67c1-103">A generic procedure attempts to override a generic base class procedure, but they have different constraint lists on their type parameters.</span></span>  
+# <a name="39ltprocedurenamegt39-cannot-override-39ltbaseprocedurenamegt39-because-they-differ-by-type-parameter-constraints"></a><span data-ttu-id="23496-102">&#39;&lt;procedurename&gt; &#39;オーバーライドできません&#39; &lt;baseprocedurename&gt; &#39;が異なるため、型パラメーターの制約</span><span class="sxs-lookup"><span data-stu-id="23496-102">&#39;&lt;procedurename&gt;&#39; cannot override &#39;&lt;baseprocedurename&gt;&#39; because they differ by type parameter constraints</span></span>
+<span data-ttu-id="23496-103">ジェネリック プロシージャはジェネリック基底クラスのプロシージャをオーバーライドしようとしますが、それらの型パラメーターの制約リストが異なります。</span><span class="sxs-lookup"><span data-stu-id="23496-103">A generic procedure attempts to override a generic base class procedure, but they have different constraint lists on their type parameters.</span></span>  
   
- <span data-ttu-id="f67c1-104">基底クラスのプロシージャをオーバーライドするには、オーバーライドするプロシージャは、基底クラスのプロシージャの完全なシグネチャだけでなく、プロシージャのアクセス レベルおよび各パラメーターの引き渡し方法が一致している必要があります。</span><span class="sxs-lookup"><span data-stu-id="f67c1-104">To override a base class procedure, the overriding procedure must match not only the complete signature of the base class procedure, but also the access level of the procedure and the passing mechanism of each parameter.</span></span>  
+ <span data-ttu-id="23496-104">基底クラスのプロシージャをオーバーライドするには、オーバーライドするプロシージャは、基底クラスのプロシージャの完全なシグネチャだけでなく、プロシージャのアクセス レベルおよび各パラメーターの引き渡し方法が一致している必要があります。</span><span class="sxs-lookup"><span data-stu-id="23496-104">To override a base class procedure, the overriding procedure must match not only the complete signature of the base class procedure, but also the access level of the procedure and the passing mechanism of each parameter.</span></span>  
   
- <span data-ttu-id="f67c1-105">ジェネリック基底クラスのプロシージャをオーバーライドするには、オーバーライドするプロシージャは、さらに型パラメーターの数およびそれぞれの制約リストが一致している必要があります。</span><span class="sxs-lookup"><span data-stu-id="f67c1-105">To override a generic base class procedure, the overriding procedure must additionally match the number of type parameters and the constraint list of each one.</span></span>  
+ <span data-ttu-id="23496-105">ジェネリック基底クラスのプロシージャをオーバーライドするには、オーバーライドするプロシージャは、さらに型パラメーターの数およびそれぞれの制約リストが一致している必要があります。</span><span class="sxs-lookup"><span data-stu-id="23496-105">To override a generic base class procedure, the overriding procedure must additionally match the number of type parameters and the constraint list of each one.</span></span>  
   
- <span data-ttu-id="f67c1-106">オーバーライド要件の詳細については、「 [Overrides](../../visual-basic/language-reference/modifiers/overrides.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="f67c1-106">For more information on overriding requirements, see [Overrides](../../visual-basic/language-reference/modifiers/overrides.md).</span></span>  
+ <span data-ttu-id="23496-106">オーバーライド要件の詳細については、「 [Overrides](../../visual-basic/language-reference/modifiers/overrides.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="23496-106">For more information on overriding requirements, see [Overrides](../../visual-basic/language-reference/modifiers/overrides.md).</span></span>  
   
- <span data-ttu-id="f67c1-107">**エラー ID:** BC32077</span><span class="sxs-lookup"><span data-stu-id="f67c1-107">**Error ID:** BC32077</span></span>  
+ <span data-ttu-id="23496-107">**エラー ID:** BC32077</span><span class="sxs-lookup"><span data-stu-id="23496-107">**Error ID:** BC32077</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="f67c1-108">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="f67c1-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="23496-108">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="23496-108">To correct this error</span></span>  
   
--   <span data-ttu-id="f67c1-109">基底クラスのプロシージャをオーバーライドする場合は、基底クラスのプロシージャの制約と完全に一致するように型パラメーターの制約を変更します。</span><span class="sxs-lookup"><span data-stu-id="f67c1-109">If you intend to override the base class procedure, revise the type parameter constraints to exactly match those of the base class procedure.</span></span>  
+-   <span data-ttu-id="23496-109">基底クラスのプロシージャをオーバーライドする場合は、基底クラスのプロシージャの制約と完全に一致するように型パラメーターの制約を変更します。</span><span class="sxs-lookup"><span data-stu-id="23496-109">If you intend to override the base class procedure, revise the type parameter constraints to exactly match those of the base class procedure.</span></span>  
   
--   <span data-ttu-id="f67c1-110">型パラメーターの制約をそのまま維持する必要がある場合は、基底クラスのプロシージャをオーバーライドすることはできません。</span><span class="sxs-lookup"><span data-stu-id="f67c1-110">If the type parameter constraints must remain as you have them, you cannot override the base class procedure.</span></span> <span data-ttu-id="f67c1-111">宣言から `Overrides` キーワードを削除します。</span><span class="sxs-lookup"><span data-stu-id="f67c1-111">Remove the `Overrides` keyword from the declaration.</span></span>  
+-   <span data-ttu-id="23496-110">型パラメーターの制約をそのまま維持する必要がある場合は、基底クラスのプロシージャをオーバーライドすることはできません。</span><span class="sxs-lookup"><span data-stu-id="23496-110">If the type parameter constraints must remain as you have them, you cannot override the base class procedure.</span></span> <span data-ttu-id="23496-111">宣言から `Overrides` キーワードを削除します。</span><span class="sxs-lookup"><span data-stu-id="23496-111">Remove the `Overrides` keyword from the declaration.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="f67c1-112">関連項目</span><span class="sxs-lookup"><span data-stu-id="f67c1-112">See Also</span></span>  
- [<span data-ttu-id="f67c1-113">Visual Basic におけるジェネリック型</span><span class="sxs-lookup"><span data-stu-id="f67c1-113">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+## <a name="see-also"></a><span data-ttu-id="23496-112">関連項目</span><span class="sxs-lookup"><span data-stu-id="23496-112">See Also</span></span>  
+ [<span data-ttu-id="23496-113">Visual Basic におけるジェネリック型</span><span class="sxs-lookup"><span data-stu-id="23496-113">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
