--- a/docs/visual-basic/misc/bc32085.md
+++ b/docs/visual-basic/misc/bc32085.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33627963"
 ---
 # <a name="arguments-cannot-be-passed-to-a-39new39-used-on-a-type-parameter"></a><span data-ttu-id="31fdd-102">引数を渡すことができない、&#39;新規&#39;型パラメーターの使用</span><span class="sxs-lookup"><span data-stu-id="31fdd-102">Arguments cannot be passed to a &#39;New&#39; used on a type parameter</span></span>
 <span data-ttu-id="31fdd-103">宣言または代入ステートメントはジェネリック型を呼び出しが型パラメーターにコンス トラクター引数を指定、 [New 演算子](../../visual-basic/language-reference/operators/new-operator.md)制約。</span><span class="sxs-lookup"><span data-stu-id="31fdd-103">A declaration or assignment statement invokes a generic type and supplies constructor arguments to a type parameter that has the [New Operator](../../visual-basic/language-reference/operators/new-operator.md) constraint.</span></span>  
