--- a/docs/visual-basic/misc/bc32092.md
+++ b/docs/visual-basic/misc/bc32092.md
@@ -1,43 +1,37 @@
 ---
-title: "型または &#39;です。新しい &#39;です。必要です。"
+title: 型または&#39;新規&#39;が必要です
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc32092
 - bc32092
 helpviewer_keywords:
 - BC32092
 ms.assetid: b3041c1d-837c-4d58-bbb4-5c46f227b66d
-caps.latest.revision: 
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 9ab11dba9b57bbd2a20db56d4ebab9a0d7768197
-ms.sourcegitcommit: c0dd436f6f8f44dc80dc43b07f6841a00b74b23f
+ms.openlocfilehash: af1f2230f076502a4706683543d1888868697a7f
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 01/19/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33629358"
 ---
-# <a name="type-or-39new39-expected"></a><span data-ttu-id="627a4-102">型または &#39;です。新しい &#39;です。必要です。</span><span class="sxs-lookup"><span data-stu-id="627a4-102">Type or &#39;New&#39; expected</span></span>
-<span data-ttu-id="627a4-103">ジェネリック型の宣言に含まれる型パラメーターは `As` キーワードを使用して制約リストを導入していますが、有効な制約が指定されていません。</span><span class="sxs-lookup"><span data-stu-id="627a4-103">A type parameter in the declaration of a generic type introduces a constraint list with the `As` keyword but does not specify a valid constraint.</span></span>  
+# <a name="type-or-39new39-expected"></a><span data-ttu-id="379b1-102">型または&#39;新規&#39;が必要です</span><span class="sxs-lookup"><span data-stu-id="379b1-102">Type or &#39;New&#39; expected</span></span>
+<span data-ttu-id="379b1-103">ジェネリック型の宣言に含まれる型パラメーターは `As` キーワードを使用して制約リストを導入していますが、有効な制約が指定されていません。</span><span class="sxs-lookup"><span data-stu-id="379b1-103">A type parameter in the declaration of a generic type introduces a constraint list with the `As` keyword but does not specify a valid constraint.</span></span>  
   
- <span data-ttu-id="627a4-104">型パラメーターの制約は、有効なクラスかインターフェイス、または、 `Class`、 `Structure`、 `New`キーワードのいずれかにする必要があります。</span><span class="sxs-lookup"><span data-stu-id="627a4-104">A constraint on a type parameter must be a valid class or interface, or one of the keywords `Class`, `Structure`, or `New`.</span></span> <span data-ttu-id="627a4-105">無効な制約を指定するか、いずれも指定しない場合、コンパイラはこのエラーを生成します。</span><span class="sxs-lookup"><span data-stu-id="627a4-105">If you specify an invalid constraint or none at all, the compiler generates this error.</span></span>  
+ <span data-ttu-id="379b1-104">型パラメーターの制約は、有効なクラスかインターフェイス、または、 `Class`、 `Structure`、 `New`キーワードのいずれかにする必要があります。</span><span class="sxs-lookup"><span data-stu-id="379b1-104">A constraint on a type parameter must be a valid class or interface, or one of the keywords `Class`, `Structure`, or `New`.</span></span> <span data-ttu-id="379b1-105">無効な制約を指定するか、いずれも指定しない場合、コンパイラはこのエラーを生成します。</span><span class="sxs-lookup"><span data-stu-id="379b1-105">If you specify an invalid constraint or none at all, the compiler generates this error.</span></span>  
   
- <span data-ttu-id="627a4-106">**エラー ID:** BC32092</span><span class="sxs-lookup"><span data-stu-id="627a4-106">**Error ID:** BC32092</span></span>  
+ <span data-ttu-id="379b1-106">**エラー ID:** BC32092</span><span class="sxs-lookup"><span data-stu-id="379b1-106">**Error ID:** BC32092</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="627a4-107">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="627a4-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="379b1-107">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="379b1-107">To correct this error</span></span>  
   
-1.  <span data-ttu-id="627a4-108">型パラメーターが制約を受ける方法を判別し、制約リストで適切な制約を指定します。</span><span class="sxs-lookup"><span data-stu-id="627a4-108">Determine how the type parameter should be constrained and specify the appropriate constraint in the constraint list.</span></span>  
+1.  <span data-ttu-id="379b1-108">型パラメーターが制約を受ける方法を判別し、制約リストで適切な制約を指定します。</span><span class="sxs-lookup"><span data-stu-id="379b1-108">Determine how the type parameter should be constrained and specify the appropriate constraint in the constraint list.</span></span>  
   
-2.  <span data-ttu-id="627a4-109">クラスまたはインターフェイスによって型パラメーターを制限する場合は、制約のスペルが正しいことを確認します。</span><span class="sxs-lookup"><span data-stu-id="627a4-109">If you intend to constrain the type parameter by a class or interface, make sure the constraint spells it correctly.</span></span>  
+2.  <span data-ttu-id="379b1-109">クラスまたはインターフェイスによって型パラメーターを制限する場合は、制約のスペルが正しいことを確認します。</span><span class="sxs-lookup"><span data-stu-id="379b1-109">If you intend to constrain the type parameter by a class or interface, make sure the constraint spells it correctly.</span></span>  
   
-3.  <span data-ttu-id="627a4-110">1 つの型パラメーターで複数の制約を分離する場合はコンマで区切り、制約のリストを中かっこで囲みます (`{ }`)。</span><span class="sxs-lookup"><span data-stu-id="627a4-110">Remember to separate multiple constraints on a single type parameter with commas, and to enclose the constraint list in braces (`{ }`).</span></span>  
+3.  <span data-ttu-id="379b1-110">1 つの型パラメーターで複数の制約を分離する場合はコンマで区切り、制約のリストを中かっこで囲みます (`{ }`)。</span><span class="sxs-lookup"><span data-stu-id="379b1-110">Remember to separate multiple constraints on a single type parameter with commas, and to enclose the constraint list in braces (`{ }`).</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="627a4-111">参照</span><span class="sxs-lookup"><span data-stu-id="627a4-111">See Also</span></span>  
- [<span data-ttu-id="627a4-112">Visual Basic におけるジェネリック型</span><span class="sxs-lookup"><span data-stu-id="627a4-112">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
- [<span data-ttu-id="627a4-113">クラス (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="627a4-113">Class (Visual Basic)</span></span>](http://msdn.microsoft.com/library/0777c6e6-46bc-451b-ad70-57b49d4ef4f7)  
- [<span data-ttu-id="627a4-114">構造体 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="627a4-114">Structure (Visual Basic)</span></span>](http://msdn.microsoft.com/library/263ce115-ac36-4c05-8cb7-0e0eead5c6d0)  
- [<span data-ttu-id="627a4-115">New 演算子</span><span class="sxs-lookup"><span data-stu-id="627a4-115">New Operator</span></span>](../../visual-basic/language-reference/operators/new-operator.md)  
- [<span data-ttu-id="627a4-116">型リスト</span><span class="sxs-lookup"><span data-stu-id="627a4-116">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
+## <a name="see-also"></a><span data-ttu-id="379b1-111">関連項目</span><span class="sxs-lookup"><span data-stu-id="379b1-111">See Also</span></span>  
+ [<span data-ttu-id="379b1-112">Visual Basic におけるジェネリック型</span><span class="sxs-lookup"><span data-stu-id="379b1-112">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
+ [<span data-ttu-id="379b1-113">クラス (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="379b1-113">Class (Visual Basic)</span></span>](http://msdn.microsoft.com/library/0777c6e6-46bc-451b-ad70-57b49d4ef4f7)  
+ [<span data-ttu-id="379b1-114">構造体 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="379b1-114">Structure (Visual Basic)</span></span>](http://msdn.microsoft.com/library/263ce115-ac36-4c05-8cb7-0e0eead5c6d0)  
+ [<span data-ttu-id="379b1-115">New 演算子</span><span class="sxs-lookup"><span data-stu-id="379b1-115">New Operator</span></span>](../../visual-basic/language-reference/operators/new-operator.md)  
+ [<span data-ttu-id="379b1-116">型リスト</span><span class="sxs-lookup"><span data-stu-id="379b1-116">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
