--- a/docs/visual-basic/misc/bc32120.md
+++ b/docs/visual-basic/misc/bc32120.md
@@ -1,29 +1,23 @@
 ---
-title: "インターフェイス &#39; を継承できません。&lt;interfacename1&gt;&#39;インターフェイス &#39; と同じである可能性がありますので&lt;interfacename2&gt;&#39; いくつかの型引数"
+title: インターフェイスを継承できません&#39; &lt;interfacename1&gt; &#39;インターフェイスと同じである可能性がありますので&#39; &lt;interfacename2&gt; &#39;いくつかの型引数。
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc32120
 - bc32120
 helpviewer_keywords:
 - BC32120
 ms.assetid: c91f84a1-e61d-4b5f-8028-221e64ac044c
-caps.latest.revision: 
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 75c72e89a40e1572b3c030ac1f4ff125baae2e32
-ms.sourcegitcommit: 34ec7753acf76f90a0fa845235ef06663dc9e36e
+ms.openlocfilehash: 9ad6e7e5b0ee6055ef412de53efa9b7b5ce078bd
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 12/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33630394"
 ---
-# <a name="cannot-inherit-interface-39ltinterfacename1gt39-because-it-could-be-identical-to-interface-39ltinterfacename2gt39-for-some-type-arguments"></a><span data-ttu-id="491f6-102">インターフェイス &#39; を継承できません。&lt;interfacename1&gt;&#39;インターフェイス &#39; と同じである可能性がありますので&lt;interfacename2&gt;&#39; いくつかの型引数</span><span class="sxs-lookup"><span data-stu-id="491f6-102">Cannot inherit interface &#39;&lt;interfacename1&gt;&#39; because it could be identical to interface &#39;&lt;interfacename2&gt;&#39; for some type arguments</span></span>
-<span data-ttu-id="491f6-103">ジェネリック インターフェイスが別のジェネリック インターフェイスから 2 回以上継承されており、その継承のうちの 2 つが、型引数の特定の値について競合している可能性があります。</span><span class="sxs-lookup"><span data-stu-id="491f6-103">A generic interface inherits more than once from another generic interface, and two of the inheritances could conflict for certain values of type arguments.</span></span>  
+# <a name="cannot-inherit-interface-39ltinterfacename1gt39-because-it-could-be-identical-to-interface-39ltinterfacename2gt39-for-some-type-arguments"></a><span data-ttu-id="d9bd5-102">インターフェイスを継承できません&#39; &lt;interfacename1&gt; &#39;インターフェイスと同じである可能性がありますので&#39; &lt;interfacename2&gt; &#39;いくつかの型引数。</span><span class="sxs-lookup"><span data-stu-id="d9bd5-102">Cannot inherit interface &#39;&lt;interfacename1&gt;&#39; because it could be identical to interface &#39;&lt;interfacename2&gt;&#39; for some type arguments</span></span>
+<span data-ttu-id="d9bd5-103">ジェネリック インターフェイスが別のジェネリック インターフェイスから 2 回以上継承されており、その継承のうちの 2 つが、型引数の特定の値について競合している可能性があります。</span><span class="sxs-lookup"><span data-stu-id="d9bd5-103">A generic interface inherits more than once from another generic interface, and two of the inheritances could conflict for certain values of type arguments.</span></span>  
   
- <span data-ttu-id="491f6-104">次のステートメントでは、このエラーが生成される可能性があります。</span><span class="sxs-lookup"><span data-stu-id="491f6-104">The following statements can generate this error.</span></span>  
+ <span data-ttu-id="d9bd5-104">次のステートメントでは、このエラーが生成される可能性があります。</span><span class="sxs-lookup"><span data-stu-id="d9bd5-104">The following statements can generate this error.</span></span>  
   
  `Public Interface interfaceA(Of u)`  
   
@@ -35,21 +29,21 @@ ms.lasthandoff: 12/21/2017
   
  `End Interface`  
   
- <span data-ttu-id="491f6-105">`derivedInterface` が `t1` と `t2`の両方に同じ型を指定して構築または実装されている場合、同一の型引数を含む 2 つのバージョンの `interfaceA` を継承する必要があります。</span><span class="sxs-lookup"><span data-stu-id="491f6-105">If `derivedInterface` is constructed or implemented supplying the same type to both `t1` and `t2`, it must inherit two versions of `interfaceA` with identical type arguments.</span></span> <span data-ttu-id="491f6-106">この場合、アクセス対象のバージョンがあいまいになる可能性があります。</span><span class="sxs-lookup"><span data-stu-id="491f6-106">Doing so would produce an ambiguity about which version to access.</span></span>  
+ <span data-ttu-id="d9bd5-105">`derivedInterface` が `t1` と `t2`の両方に同じ型を指定して構築または実装されている場合、同一の型引数を含む 2 つのバージョンの `interfaceA` を継承する必要があります。</span><span class="sxs-lookup"><span data-stu-id="d9bd5-105">If `derivedInterface` is constructed or implemented supplying the same type to both `t1` and `t2`, it must inherit two versions of `interfaceA` with identical type arguments.</span></span> <span data-ttu-id="d9bd5-106">この場合、アクセス対象のバージョンがあいまいになる可能性があります。</span><span class="sxs-lookup"><span data-stu-id="d9bd5-106">Doing so would produce an ambiguity about which version to access.</span></span>  
   
- <span data-ttu-id="491f6-107">**エラー ID:** BC32120</span><span class="sxs-lookup"><span data-stu-id="491f6-107">**Error ID:** BC32120</span></span>  
+ <span data-ttu-id="d9bd5-107">**エラー ID:** BC32120</span><span class="sxs-lookup"><span data-stu-id="d9bd5-107">**Error ID:** BC32120</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="491f6-108">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="491f6-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d9bd5-108">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="d9bd5-108">To correct this error</span></span>  
   
--   <span data-ttu-id="491f6-109">派生したインターフェイスに指定する型引数の 1 つを変更して、競合を回避します。</span><span class="sxs-lookup"><span data-stu-id="491f6-109">Change one of the type arguments supplied to the derived interface so that there is no conflict.</span></span>  
+-   <span data-ttu-id="d9bd5-109">派生したインターフェイスに指定する型引数の 1 つを変更して、競合を回避します。</span><span class="sxs-lookup"><span data-stu-id="d9bd5-109">Change one of the type arguments supplied to the derived interface so that there is no conflict.</span></span>  
   
-     <span data-ttu-id="491f6-110">または</span><span class="sxs-lookup"><span data-stu-id="491f6-110">-or-</span></span>  
+     <span data-ttu-id="d9bd5-110">- または -</span><span class="sxs-lookup"><span data-stu-id="d9bd5-110">-or-</span></span>  
   
--   <span data-ttu-id="491f6-111">継承の競合や実装の競合を引き起こす可能性があるインターフェイスの 1 つを、 `Inherits` ステートメントから削除します。</span><span class="sxs-lookup"><span data-stu-id="491f6-111">Remove from the `Inherits` statement one of the interfaces causing the potential inheritance or implementation conflict.</span></span>  
+-   <span data-ttu-id="d9bd5-111">継承の競合や実装の競合を引き起こす可能性があるインターフェイスの 1 つを、 `Inherits` ステートメントから削除します。</span><span class="sxs-lookup"><span data-stu-id="d9bd5-111">Remove from the `Inherits` statement one of the interfaces causing the potential inheritance or implementation conflict.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="491f6-112">参照</span><span class="sxs-lookup"><span data-stu-id="491f6-112">See Also</span></span>  
+## <a name="see-also"></a><span data-ttu-id="d9bd5-112">関連項目</span><span class="sxs-lookup"><span data-stu-id="d9bd5-112">See Also</span></span>  
    
- [<span data-ttu-id="491f6-113">Interface ステートメント</span><span class="sxs-lookup"><span data-stu-id="491f6-113">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)  
- [<span data-ttu-id="491f6-114">継承の基本</span><span class="sxs-lookup"><span data-stu-id="491f6-114">Inheritance Basics</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)  
- [<span data-ttu-id="491f6-115">Inherits ステートメント</span><span class="sxs-lookup"><span data-stu-id="491f6-115">Inherits Statement</span></span>](../../visual-basic/language-reference/statements/inherits-statement.md)  
- [<span data-ttu-id="491f6-116">Visual Basic におけるジェネリック型</span><span class="sxs-lookup"><span data-stu-id="491f6-116">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+ [<span data-ttu-id="d9bd5-113">Interface ステートメント</span><span class="sxs-lookup"><span data-stu-id="d9bd5-113">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)  
+ [<span data-ttu-id="d9bd5-114">継承の基本</span><span class="sxs-lookup"><span data-stu-id="d9bd5-114">Inheritance Basics</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)  
+ [<span data-ttu-id="d9bd5-115">Inherits ステートメント</span><span class="sxs-lookup"><span data-stu-id="d9bd5-115">Inherits Statement</span></span>](../../visual-basic/language-reference/statements/inherits-statement.md)  
+ [<span data-ttu-id="d9bd5-116">Visual Basic におけるジェネリック型</span><span class="sxs-lookup"><span data-stu-id="d9bd5-116">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
