--- a/docs/visual-basic/misc/bc33013.md
+++ b/docs/visual-basic/misc/bc33013.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33629952"
 ---
 # <a name="operators-cannot-be-declared-39ltkeywordgt39"></a><span data-ttu-id="6e5e2-102">演算子を宣言できません&#39;&lt;キーワード&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="6e5e2-102">Operators cannot be declared &#39;&lt;keyword&gt;&#39;</span></span>
 <span data-ttu-id="6e5e2-103">演算子が、演算子の定義に使用できないキーワードを使用して宣言されています。</span><span class="sxs-lookup"><span data-stu-id="6e5e2-103">An operator is declared with a keyword that is not valid for operator definitions.</span></span>  
