--- a/docs/visual-basic/misc/bc36015.md
+++ b/docs/visual-basic/misc/bc36015.md
@@ -1,47 +1,41 @@
 ---
-title: "&#39;です。&lt;typename&gt;&#39; で公開されている別の型と同じ名前を持つ、&#39;です。マイ &#39;です。グループ"
+title: '&#39;&lt;typename&gt; &#39;で公開されている別の型と同じ名前を持つ、 &#39;My&#39;グループ'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc36015
 - bc36015
 helpviewer_keywords:
 - BC36015
 ms.assetid: cd2286da-49be-461f-bec9-58e9c53e250b
-caps.latest.revision: 
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 1bcd628b25336c2e247f9016d144b2bb2fa5076a
-ms.sourcegitcommit: 34ec7753acf76f90a0fa845235ef06663dc9e36e
+ms.openlocfilehash: 47331568ad19e9f96b337266a0d3c285d7e5788b
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 12/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33631109"
 ---
-# <a name="39lttypenamegt39-has-the-same-name-as-another-type-exposed-in-a-39my39-group"></a><span data-ttu-id="05854-102">&#39;です。&lt;typename&gt;&#39; で公開されている別の型と同じ名前を持つ、&#39;です。マイ &#39;です。グループ</span><span class="sxs-lookup"><span data-stu-id="05854-102">&#39;&lt;typename&gt;&#39; has the same name as another type exposed in a &#39;My&#39; group</span></span>
-<span data-ttu-id="05854-103">'\<typename >' で公開されている別の型と同じ名前を持つ、'My' グループ。</span><span class="sxs-lookup"><span data-stu-id="05854-103">'\<typename>' has the same name as another type exposed in a 'My' group.</span></span> <span data-ttu-id="05854-104">フォームまたはそれを囲む名前空間の名前を変更してください。</span><span class="sxs-lookup"><span data-stu-id="05854-104">Rename the form or its enclosing namespace.</span></span>  
+# <a name="39lttypenamegt39-has-the-same-name-as-another-type-exposed-in-a-39my39-group"></a><span data-ttu-id="e3d06-102">&#39;&lt;typename&gt; &#39;で公開されている別の型と同じ名前を持つ、 &#39;My&#39;グループ</span><span class="sxs-lookup"><span data-stu-id="e3d06-102">&#39;&lt;typename&gt;&#39; has the same name as another type exposed in a &#39;My&#39; group</span></span>
+<span data-ttu-id="e3d06-103">'\<typename >' で公開されている別の型と同じ名前を持つ、'My' グループ。</span><span class="sxs-lookup"><span data-stu-id="e3d06-103">'\<typename>' has the same name as another type exposed in a 'My' group.</span></span> <span data-ttu-id="e3d06-104">フォームまたはそれを囲む名前空間の名前を変更してください。</span><span class="sxs-lookup"><span data-stu-id="e3d06-104">Rename the form or its enclosing namespace.</span></span>  
   
- <span data-ttu-id="05854-105">いずれか 1 つの `My` オブジェクトのクラスまたは構造体と同じ名前でクラスまたは構造体が宣言されています。</span><span class="sxs-lookup"><span data-stu-id="05854-105">A class or structure is declared with the same name as a class or structure in one of the `My` objects.</span></span>  
+ <span data-ttu-id="e3d06-105">いずれか 1 つの `My` オブジェクトのクラスまたは構造体と同じ名前でクラスまたは構造体が宣言されています。</span><span class="sxs-lookup"><span data-stu-id="e3d06-105">A class or structure is declared with the same name as a class or structure in one of the `My` objects.</span></span>  
   
- <span data-ttu-id="05854-106">`My` などの `My.Forms`オブジェクト経由でアクセスできる 2 つのクラス間で、名前の競合を回避することはできません。</span><span class="sxs-lookup"><span data-stu-id="05854-106">A name collision could not be avoided between two classes that can be accessed through a `My` object, such as `My.Forms`.</span></span>  
+ <span data-ttu-id="e3d06-106">`My` などの `My.Forms`オブジェクト経由でアクセスできる 2 つのクラス間で、名前の競合を回避することはできません。</span><span class="sxs-lookup"><span data-stu-id="e3d06-106">A name collision could not be avoided between two classes that can be accessed through a `My` object, such as `My.Forms`.</span></span>  
   
- <span data-ttu-id="05854-107">内のクラス間、潜在的な名前の競合があるかどうか、`My`オブジェクト、コンパイラは型のプロパティ名を変更する*ClassName*に*RootNamespace*_*Namespace* \_ *ClassName*です。</span><span class="sxs-lookup"><span data-stu-id="05854-107">If there is a potential name collision between classes in a `My` object, the compiler changes the property name for the type from *ClassName* to *RootNamespace*_*Namespace*\_*ClassName*.</span></span> <span data-ttu-id="05854-108">たとえば、 `Form1`という名前の 2 つのフォームがあるとします。</span><span class="sxs-lookup"><span data-stu-id="05854-108">For example, consider two forms named `Form1`.</span></span> <span data-ttu-id="05854-109">これらのフォームのいずれかがルート名前空間 `WindowsApplication1` および名前空間 `Namespace1`にある場合は、 `My.Forms.WindowsApplication1_Namespace1_Form1`を通じてそのフォームにアクセスします。</span><span class="sxs-lookup"><span data-stu-id="05854-109">If one of these forms is in the root namespace `WindowsApplication1` and in the namespace `Namespace1`, you would access that form through `My.Forms.WindowsApplication1_Namespace1_Form1`.</span></span>  
+ <span data-ttu-id="e3d06-107">内のクラス間、潜在的な名前の競合があるかどうか、`My`オブジェクト、コンパイラは型のプロパティ名を変更する*ClassName*に*RootNamespace*_*Namespace* \_ *ClassName*です。</span><span class="sxs-lookup"><span data-stu-id="e3d06-107">If there is a potential name collision between classes in a `My` object, the compiler changes the property name for the type from *ClassName* to *RootNamespace*_*Namespace*\_*ClassName*.</span></span> <span data-ttu-id="e3d06-108">たとえば、 `Form1`という名前の 2 つのフォームがあるとします。</span><span class="sxs-lookup"><span data-stu-id="e3d06-108">For example, consider two forms named `Form1`.</span></span> <span data-ttu-id="e3d06-109">これらのフォームのいずれかがルート名前空間 `WindowsApplication1` および名前空間 `Namespace1`にある場合は、 `My.Forms.WindowsApplication1_Namespace1_Form1`を通じてそのフォームにアクセスします。</span><span class="sxs-lookup"><span data-stu-id="e3d06-109">If one of these forms is in the root namespace `WindowsApplication1` and in the namespace `Namespace1`, you would access that form through `My.Forms.WindowsApplication1_Namespace1_Form1`.</span></span>  
   
- <span data-ttu-id="05854-110">このエラーは、名前にアンダースコアが含まれた名前空間が入れ子になり、その中に名前が同じ 2 つのクラスがある場合に発生する可能性があります。</span><span class="sxs-lookup"><span data-stu-id="05854-110">This error can occur if two classes have the same name and are in nested namespaces with underscores in their names.</span></span> <span data-ttu-id="05854-111">コンパイラがクラスの新しいプロパティ名を作成する場合に、引き続き名前の競合があります。</span><span class="sxs-lookup"><span data-stu-id="05854-111">When the compiler constructs the new property names for the classes, there is still a name collision.</span></span>  
+ <span data-ttu-id="e3d06-110">このエラーは、名前にアンダースコアが含まれた名前空間が入れ子になり、その中に名前が同じ 2 つのクラスがある場合に発生する可能性があります。</span><span class="sxs-lookup"><span data-stu-id="e3d06-110">This error can occur if two classes have the same name and are in nested namespaces with underscores in their names.</span></span> <span data-ttu-id="e3d06-111">コンパイラがクラスの新しいプロパティ名を作成する場合に、引き続き名前の競合があります。</span><span class="sxs-lookup"><span data-stu-id="e3d06-111">When the compiler constructs the new property names for the classes, there is still a name collision.</span></span>  
   
- <span data-ttu-id="05854-112">**エラー ID:** BC36015</span><span class="sxs-lookup"><span data-stu-id="05854-112">**Error ID:** BC36015</span></span>  
+ <span data-ttu-id="e3d06-112">**エラー ID:** BC36015</span><span class="sxs-lookup"><span data-stu-id="e3d06-112">**Error ID:** BC36015</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="05854-113">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="05854-113">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e3d06-113">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="e3d06-113">To correct this error</span></span>  
   
-1.  <span data-ttu-id="05854-114">新しいフォームの名前を変更します。</span><span class="sxs-lookup"><span data-stu-id="05854-114">Rename the new form.</span></span>  
+1.  <span data-ttu-id="e3d06-114">新しいフォームの名前を変更します。</span><span class="sxs-lookup"><span data-stu-id="e3d06-114">Rename the new form.</span></span>  
   
-2.  <span data-ttu-id="05854-115">名前空間の名前を変更します。</span><span class="sxs-lookup"><span data-stu-id="05854-115">Rename the namespaces.</span></span>  
+2.  <span data-ttu-id="e3d06-115">名前空間の名前を変更します。</span><span class="sxs-lookup"><span data-stu-id="e3d06-115">Rename the namespaces.</span></span>  
   
-     <span data-ttu-id="05854-116">既存のクラスまたは構造体と同じ名前をクラスまたは構造体に付けないでください。</span><span class="sxs-lookup"><span data-stu-id="05854-116">Avoid naming any class or structure with the same name as an existing one.</span></span>  
+     <span data-ttu-id="e3d06-116">既存のクラスまたは構造体と同じ名前をクラスまたは構造体に付けないでください。</span><span class="sxs-lookup"><span data-stu-id="e3d06-116">Avoid naming any class or structure with the same name as an existing one.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="05854-117">参照</span><span class="sxs-lookup"><span data-stu-id="05854-117">See Also</span></span>  
+## <a name="see-also"></a><span data-ttu-id="e3d06-117">関連項目</span><span class="sxs-lookup"><span data-stu-id="e3d06-117">See Also</span></span>  
  <xref:System.Windows.Forms.Form>  
  <xref:Microsoft.VisualBasic.MyGroupCollectionAttribute>  
 
