--- a/docs/visual-basic/misc/bc36565.md
+++ b/docs/visual-basic/misc/bc36565.md
@@ -1,33 +1,27 @@
 ---
 title: 引数が多すぎます
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc36565
 - bc36565
 helpviewer_keywords:
 - BC36565
 ms.assetid: 7ed937fb-c5a4-4e4d-90f6-4f1c6ef4f74a
-caps.latest.revision: 5
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: e35e7fc153ab684ecbb41bf69ee277a65bb4dfdb
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 031e6df78d65e920f068016b4517a0295179ac31
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33630940"
 ---
-# <a name="too-many-arguments"></a><span data-ttu-id="c0971-102">引数が多すぎます</span><span class="sxs-lookup"><span data-stu-id="c0971-102">Too many arguments</span></span>
-<span data-ttu-id="c0971-103">プロシージャ呼び出しで指定した引数の数が、そのプロシージャに対して定義されている引数の数を超えています。</span><span class="sxs-lookup"><span data-stu-id="c0971-103">The number of arguments supplied in a procedure call exceeds the number of arguments defined for the procedure.</span></span>  
+# <a name="too-many-arguments"></a><span data-ttu-id="b0ac4-102">引数が多すぎます</span><span class="sxs-lookup"><span data-stu-id="b0ac4-102">Too many arguments</span></span>
+<span data-ttu-id="b0ac4-103">プロシージャ呼び出しで指定した引数の数が、そのプロシージャに対して定義されている引数の数を超えています。</span><span class="sxs-lookup"><span data-stu-id="b0ac4-103">The number of arguments supplied in a procedure call exceeds the number of arguments defined for the procedure.</span></span>  
   
- <span data-ttu-id="c0971-104">**エラー ID:** BC36565</span><span class="sxs-lookup"><span data-stu-id="c0971-104">**Error ID:** BC36565</span></span>  
+ <span data-ttu-id="b0ac4-104">**エラー ID:** BC36565</span><span class="sxs-lookup"><span data-stu-id="b0ac4-104">**Error ID:** BC36565</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c0971-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="c0971-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b0ac4-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="b0ac4-105">To correct this error</span></span>  
   
--   <span data-ttu-id="c0971-106">プロシージャの定義を調べ、呼び出しから余分な引数を削除します。</span><span class="sxs-lookup"><span data-stu-id="c0971-106">Consult the definition of the procedure, and remove the extra arguments from the call.</span></span>  
+-   <span data-ttu-id="b0ac4-106">プロシージャの定義を調べ、呼び出しから余分な引数を削除します。</span><span class="sxs-lookup"><span data-stu-id="b0ac4-106">Consult the definition of the procedure, and remove the extra arguments from the call.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="c0971-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="c0971-107">See Also</span></span>  
- [<span data-ttu-id="c0971-108">プロシージャのパラメーターと引数</span><span class="sxs-lookup"><span data-stu-id="c0971-108">Procedure Parameters and Arguments</span></span>](../../visual-basic/programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
+## <a name="see-also"></a><span data-ttu-id="b0ac4-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="b0ac4-107">See Also</span></span>  
+ [<span data-ttu-id="b0ac4-108">プロシージャのパラメーターと引数</span><span class="sxs-lookup"><span data-stu-id="b0ac4-108">Procedure Parameters and Arguments</span></span>](../../visual-basic/programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
