--- a/docs/visual-basic/misc/bc36625.md
+++ b/docs/visual-basic/misc/bc36625.md
@@ -1,27 +1,21 @@
 ---
-title: 'ラムダ式に変換できません (& a) #39 です。&lt;typename&gt;&#39;のためです (& m); #39&lt; 。typename&gt;&#39; デリゲート型ではありません'
+title: ラムダ式に変換できない&#39; &lt;typename&gt; &#39;ため&#39; &lt;typename&gt; &#39;デリゲート型ではありません
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc36625
 - vbc36625
 helpviewer_keywords:
 - BC36625
 ms.assetid: c03634d4-d831-4f8c-b6ab-566465968e4d
-caps.latest.revision: 6
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: f09ab2ded131a10f578449a0273ccdb148c94630
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 8bd9178a983b491bc60a0fa6a8e6864f976d9dad
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33631668"
 ---
-# <a name="lambda-expression-cannot-be-converted-to-39lttypenamegt39-because-39lttypenamegt39-is-not-a-delegate-type"></a><span data-ttu-id="1173d-102">ラムダ式に変換できません (& a) #39 です。&lt;typename&gt;&#39;のためです (& m); #39&lt; 。typename&gt;&#39; デリゲート型ではありません</span><span class="sxs-lookup"><span data-stu-id="1173d-102">Lambda expression cannot be converted to &#39;&lt;typename&gt;&#39; because &#39;&lt;typename&gt;&#39; is not a delegate type</span></span>
-<span data-ttu-id="1173d-103">ラムダ式は、デリゲートが使用できる場所で使用できます。</span><span class="sxs-lookup"><span data-stu-id="1173d-103">Lambda expressions can be used where delegates are valid.</span></span> <span data-ttu-id="1173d-104">ラムダ式は互換性のあるデリゲート型には変換できますが、その他の型には変換できません。</span><span class="sxs-lookup"><span data-stu-id="1173d-104">They can be converted to compatible delegate types, but not to any other type.</span></span> <span data-ttu-id="1173d-105">たとえば、デリゲート型を定義してこれにラムダ式を割り当てることや、ラムダ式を <xref:System.Func%601> パラメーターへの引数として送信することができます。</span><span class="sxs-lookup"><span data-stu-id="1173d-105">For example, you can define a delegate type and assign a lambda expression to it, or send a lambda expression as the argument to a <xref:System.Func%601> parameter.</span></span> <span data-ttu-id="1173d-106">次のコードに例を示します。</span><span class="sxs-lookup"><span data-stu-id="1173d-106">These examples are shown in the following code.</span></span>  
+# <a name="lambda-expression-cannot-be-converted-to-39lttypenamegt39-because-39lttypenamegt39-is-not-a-delegate-type"></a><span data-ttu-id="a20ff-102">ラムダ式に変換できない&#39; &lt;typename&gt; &#39;ため&#39; &lt;typename&gt; &#39;デリゲート型ではありません</span><span class="sxs-lookup"><span data-stu-id="a20ff-102">Lambda expression cannot be converted to &#39;&lt;typename&gt;&#39; because &#39;&lt;typename&gt;&#39; is not a delegate type</span></span>
+<span data-ttu-id="a20ff-103">ラムダ式は、デリゲートが使用できる場所で使用できます。</span><span class="sxs-lookup"><span data-stu-id="a20ff-103">Lambda expressions can be used where delegates are valid.</span></span> <span data-ttu-id="a20ff-104">ラムダ式は互換性のあるデリゲート型には変換できますが、その他の型には変換できません。</span><span class="sxs-lookup"><span data-stu-id="a20ff-104">They can be converted to compatible delegate types, but not to any other type.</span></span> <span data-ttu-id="a20ff-105">たとえば、デリゲート型を定義してこれにラムダ式を割り当てることや、ラムダ式を <xref:System.Func%601> パラメーターへの引数として送信することができます。</span><span class="sxs-lookup"><span data-stu-id="a20ff-105">For example, you can define a delegate type and assign a lambda expression to it, or send a lambda expression as the argument to a <xref:System.Func%601> parameter.</span></span> <span data-ttu-id="a20ff-106">次のコードに例を示します。</span><span class="sxs-lookup"><span data-stu-id="a20ff-106">These examples are shown in the following code.</span></span>  
   
 ```vb  
 Module Module1  
@@ -47,7 +41,7 @@ Module Module1
 End Module  
 ```  
   
- <span data-ttu-id="1173d-107">**エラー ID:** BC36625</span><span class="sxs-lookup"><span data-stu-id="1173d-107">**Error ID:** BC36625</span></span>  
+ <span data-ttu-id="a20ff-107">**エラー ID:** BC36625</span><span class="sxs-lookup"><span data-stu-id="a20ff-107">**Error ID:** BC36625</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="1173d-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="1173d-108">See Also</span></span>  
- [<span data-ttu-id="1173d-109">ラムダ式</span><span class="sxs-lookup"><span data-stu-id="1173d-109">Lambda Expressions</span></span>](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)
+## <a name="see-also"></a><span data-ttu-id="a20ff-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="a20ff-108">See Also</span></span>  
+ [<span data-ttu-id="a20ff-109">ラムダ式</span><span class="sxs-lookup"><span data-stu-id="a20ff-109">Lambda Expressions</span></span>](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)
