--- a/docs/visual-basic/misc/bc40046.md
+++ b/docs/visual-basic/misc/bc40046.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33633944"
 ---
 # <a name="type-39lttypenamegt39-and-partial-type-39lttypenamegt39-conflict-in-container-39ltcontainernamegt39-but-are-being-merged-because-one-of-them-is-declared-partial"></a><span data-ttu-id="dc402-102">型&#39; &lt;typename&gt; &#39;と部分型&#39; &lt;typename&gt; &#39;コンテナー内の競合&#39; &lt;containername&gt;&#39;、されますが、うち 1 つが部分的な宣言ためにマージ</span><span class="sxs-lookup"><span data-stu-id="dc402-102">Type &#39;&lt;typename&gt;&#39; and partial type &#39;&lt;typename&gt;&#39; conflict in container &#39;&lt;containername&gt;&#39;, but are being merged because one of them is declared partial</span></span>
 <span data-ttu-id="dc402-103">1 つのクラスまたは構造体が同じコンテナー型の複数の定義で使用されており、複数の定義が `Partial`としてマークされていません。</span><span class="sxs-lookup"><span data-stu-id="dc402-103">A class or structure is appears in multiple definitions in the same container type, and more than one definition is not marked `Partial`.</span></span>  
