--- a/docs/visual-basic/misc/bc41007.md
+++ b/docs/visual-basic/misc/bc41007.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33633059"
 ---
 # <a name="attribute-39conditional39-is-only-valid-on-39sub39-declarations"></a><span data-ttu-id="3822e-102">属性&#39;条件付き&#39;でのみ有効です&#39;Sub&#39;宣言</span><span class="sxs-lookup"><span data-stu-id="3822e-102">Attribute &#39;Conditional&#39; is only valid on &#39;Sub&#39; declarations</span></span>
 <span data-ttu-id="3822e-103"><xref:System.Diagnostics.ConditionalAttribute> 属性が `Sub` プロシージャ以外のメソッドの宣言に適用されています。</span><span class="sxs-lookup"><span data-stu-id="3822e-103">The <xref:System.Diagnostics.ConditionalAttribute> attribute has been applied to a method declaration other than a `Sub` procedure.</span></span>  
