--- a/docs/visual-basic/misc/bc42016.md
+++ b/docs/visual-basic/misc/bc42016.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33634552"
 ---
 # <a name="implicit-conversion-from-39lttypename1gt39-to-39lttypename2gt39"></a><span data-ttu-id="181ff-102">暗黙的な変換&#39; &lt;typename1&gt; &#39;に&#39; &lt;typename2&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="181ff-102">Implicit conversion from &#39;&lt;typename1&gt;&#39; to &#39;&lt;typename2&gt;&#39;</span></span>
 <span data-ttu-id="181ff-103">式または代入ステートメントで、あるデータ型の値が取得され、別の型に変換されます。</span><span class="sxs-lookup"><span data-stu-id="181ff-103">An expression or an assignment statement takes a value of one data type and converts it to another type.</span></span> <span data-ttu-id="181ff-104">変換キーワードが使用されていないため、この変換は *暗黙的*です。</span><span class="sxs-lookup"><span data-stu-id="181ff-104">Because no conversion keyword is used, the conversion is *implicit*.</span></span>  
