--- a/docs/visual-basic/misc/bc42203.md
+++ b/docs/visual-basic/misc/bc42203.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33636939"
 ---
 # <a name="project-39ltprojectnamegt39-requires-a-reference-to-version-39ltversionnumber1gt39-of-assembly-39ltassemblynamegt39-but-references-version-39ltversionnumber2gt39-of-assembly-39ltassemblynamegt39-visual-basic-warning"></a><span data-ttu-id="2a142-102">プロジェクト&#39; &lt;projectname&gt; &#39;バージョンへの参照を必要と&#39; &lt;versionnumber1&gt; &#39;アセンブリの&#39; &lt;assemblyname&gt;&#39;、参照のバージョンでは&#39; &lt;versionnumber2&gt; &#39;アセンブリの&#39; &lt;assemblyname&gt; &#39; (Visual Basic 警告)</span><span class="sxs-lookup"><span data-stu-id="2a142-102">Project &#39;&lt;projectname&gt;&#39; requires a reference to version &#39;&lt;versionnumber1&gt;&#39; of assembly &#39;&lt;assemblyname&gt;&#39;, but references version &#39;&lt;versionnumber2&gt;&#39; of assembly &#39;&lt;assemblyname&gt;&#39; (Visual Basic Warning)</span></span>
 <span data-ttu-id="2a142-103">プロジェクト '\<projectname >' のバージョンへの参照が必要です'\<versionnumber1 >' アセンブリの '\<assemblyname >'、参照のバージョンでは'\<versionnumber2 >' のアセンブリ '\<assemblyname >' です。</span><span class="sxs-lookup"><span data-stu-id="2a142-103">Project '\<projectname>' requires a reference to version '\<versionnumber1>' of assembly '\<assemblyname>', but references version '\<versionnumber2>' of assembly '\<assemblyname>'.</span></span> <span data-ttu-id="2a142-104">バージョンへの参照 '\<versionnumber1 >' 生成されます。</span><span class="sxs-lookup"><span data-stu-id="2a142-104">Reference to version '\<versionnumber1>' emitted.</span></span>  
