--- a/docs/visual-basic/misc/bc42310.md
+++ b/docs/visual-basic/misc/bc42310.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33634500"
 ---
 # <a name="xml-comment-tag-39include39-must-have-a-39ltattributegt39-attribute"></a><span data-ttu-id="68e14-102">XML コメント タグ&#39;含める&#39;必要があります、 &#39;&lt;属性&gt;&#39;属性</span><span class="sxs-lookup"><span data-stu-id="68e14-102">XML comment tag &#39;include&#39; must have a &#39;&lt;attribute&gt;&#39; attribute</span></span>
 <span data-ttu-id="68e14-103">XML のコメント タグ 'include ' にする必要がありますが、\<属性 > 属性。</span><span class="sxs-lookup"><span data-stu-id="68e14-103">XML comment tag 'include' must have a \<attribute> attribute.</span></span> <span data-ttu-id="68e14-104">XML コメントは無視されます。</span><span class="sxs-lookup"><span data-stu-id="68e14-104">XML comment will be ignored.</span></span>  
